--- a/rush.yaml
+++ b/rush.yaml
@@ -64782,7 +64782,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    1 face-up Normal Monster on your field gains ATK/DEF equal to [that Normal Summoned monster's Level] x 100 until the end of this turn.
+    1 face-up Normal Monster on your field gains ATK/DEF equal to [the Level of that opponent's Normal Summoned monster] x 100 until the end of this turn.
   de:
   es:
   fr:
@@ -67594,7 +67594,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This card gains ATK equal to [the number of different Attributes in your Graveyard] x 200, until the end of this turn. Then, if your opponent's LP are 700 or less, inflict 700,000,000 damage to your opponent.
+    This card gains ATK equal to [the number of different Attributes in your Graveyard] x 200, until the end of this turn. Then, if your opponent's LP are 700 or lower, inflict 700,000,000 damage to your opponent.
   de:
   es:
   fr:
@@ -96024,7 +96024,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send the top card of your Deck to the Graveyard. You take no battle damage this turn. Then, if your LP are 3000 or more, take 2000 damage.
+    Send the top card of your Deck to the Graveyard. You take no battle damage this turn. Then, if your LP are 3000 or higher, take 2000 damage.
   de:
   es:
   fr:
@@ -104300,7 +104300,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    You take no damage from your opponent's card effects during their Main Phase only.
+    You take no damage from your opponent's card effects during your opponent's Main Phase only.
   de:
   es:
   fr:
@@ -106910,7 +106910,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This turn, 1 face-up LIGHT Attribute monster on your field gains ATK equal to [that Normal Summoned monster's ATK], and cannot be destroyed by your opponent's card effects.
+    This turn, 1 face-up LIGHT Attribute monster on your field gains ATK equal to [the ATK of that Normal Summoned monster], and cannot be destroyed by your opponent's card effects.
   de:
   es:
   fr:
@@ -108643,7 +108643,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Add 1 Level 7 or higher WIND Attribute monster and 1 Warrior Type Normal Monster from your Graveyard to your hand. You cannot activate the monster effects of non-WIND Attribute non-Warrior Type or non-Beast Type monsters this turn.
+    Add 1 Level 7 or higher WIND Attribute monster and 1 Warrior Type Normal Monster from your Graveyard to your hand. You can only activate the monster effects of WIND Attribute Warrior Type or Beast Type monsters this turn.
   de:
   es:
   fr:
@@ -110703,7 +110703,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 "Jointech Arc Scorpio"/"Jointech Spike Centipede"/"Jointech Rex" from your Graveyard to your field in face-up Defense Position. You cannot activate the effects of non-Machine Type monsters this turn.
+    Special Summon 1 "Jointech Arc Scorpio"/"Jointech Spike Centipede"/"Jointech Rex" from your Graveyard to your field in face-up Defense Position. You can only activate the effects of Machine Type monsters this turn.
   de:
   es:
   fr:
@@ -111047,7 +111047,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Destroy 1 monster on your opponent's field. You cannot activate the effects of non-Machine Type monsters this turn.
+    Destroy 1 monster on your opponent's field. You can only activate the effects of Machine Type monsters this turn.
   de:
   es:
   fr:
