--- a/data/cards/22501005.yaml
+++ b/data/cards/22501005.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    Monsters your opponent controls lose 200 ATK for each different Type among the "Ritual Beast" monsters you control. You can only use each of the following effects of "Ritual Beast Inheritance" once per turn. You can reveal 1 "Ritual Beast" monster in your hand; add 1 "Ritual Beast" monster with a different Type from your Deck to your hand, then discard 1 card. If 2 or more monsters are Special Summoned to your field at the same time: You can target 1 monster on the field; change its battle position.
+    Monsters your opponent controls lose 200 ATK for each different Type among the "Ritual Beast" monsters you control. You can only use each of the following effects of "Ritual Beast Inheritance" once per turn. You can reveal 1 "Ritual Beast" monster in your hand; add 1 "Ritual Beast" monster with a different Type from your Deck to your hand, then discard 1 card. If 2 or more monsters are Special Summoned to your field at the same time (except during the Damage Step): You can target 1 monster on the field; change its battle position.
   de:
   es:
   fr:
