--- a/data/cards/35380371.yaml
+++ b/data/cards/35380371.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    Your opponent cannot activate cards or effects in response to the activation of your "Ice Barrier" monsters' effects. If a monster(s) is Special Summoned from the Extra Deck: You can return 1 "Ice Barrier" monster you control to the hand or Deck, then you can place 1 card on the field or in the GY on the bottom of the Deck. You can only use this effect of "Frozen Domain Leading to the Ice Barrier" once per turn. Once per turn, during your End Phase: Reveal 3 "Ice Barrier" monsters with different names in your Extra Deck or destroy this card.
+    Your opponent cannot activate cards or effects in response to the activation of your "Ice Barrier" monsters' effects. If a monster(s) is Special Summoned from the Extra Deck (except during the Damage Step): You can return 1 "Ice Barrier" monster you control to the hand or Deck, then you can place 1 card on the field or in the GY on the bottom of the Deck. You can only use this effect of "Frozen Domain Leading to the Ice Barrier" once per turn. Once per turn, during your End Phase: Reveal 3 "Ice Barrier" monsters with different names in your Extra Deck or destroy this card.
   de:
   es:
   fr:
