--- a/data/cards/08173184.yaml
+++ b/data/cards/08173184.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     1 Level 4 or lower "Genex" monster
-    You can only Special Summon "Repair Genex Controller(s)" once per turn. If this card is Link Summoned: You can add 1 "Genex" monster from your GY to your hand. Once per Chain, if a "Genex" monster(s) is added to your hand, except by drawing it, you can: Immediately after this effect resolves, Normal Summon 1 "Genex" monster, also you cannot Special Summon monsters from the Extra Deck for the rest of this turn, except by Synchro Summon using a "Genex" Tuner as material.
+    You can only Special Summon "Repair Genex Controller(s)" once per turn. If this card is Link Summoned: You can add 1 "Genex" monster from your GY to your hand. Once per Chain, if a "Genex" monster(s) is added to your hand, except by drawing it, you can (except during the Damage Step): Immediately after this effect resolves, Normal Summon 1 "Genex" monster, also you cannot Special Summon monsters from the Extra Deck for the rest of this turn, except by Synchro Summon using a "Genex" Tuner as material.
   de:
   es:
   fr:
