--- a/data/cards/70583986.yaml
+++ b/data/cards/70583986.yaml
@@ -8,7 +8,7 @@ name:
   it: Dewloren, Re Tigre della Barriera di Ghiaccio
   pt: Dewloren, o Rei Tigre da Barreira de Gelo
   ja: <ruby>氷<rt>ひょう</rt></ruby><ruby>結<rt>けっ</rt></ruby><ruby>界<rt>かい</rt></ruby>の<ruby>虎<rt>こ</rt></ruby><ruby>王<rt>おう</rt></ruby> ドゥローレン
-  ja_romaji: Hyōkekkai no Ko'ō Durōren
+  ja_romaji: Hyōkekkai no Koō Durōren
   ko: 빙결계의 범왕 듀로렌
   ko_rr: Binggyeolgye-ui Beomwang Dyuroren
   zh-TW:
