--- a/data/rush/17963.yaml
+++ b/data/rush/17963.yaml
@@ -43,6 +43,10 @@ sets:
     set_name: Strongest Battle Deck Manabu - Chemist-Meow Draw of Flames!
     rarities:
     - Common
+  - set_number: RD/HC01-JP003
+    set_name: High-Grade Collection
+    rarities:
+    - Secret Rare
   ko:
   - set_number: RD/SD04-KR023
     set_name: Strongest Battle Deck Manabu - Chemist-Meow Draw of Flames!
