--- a/data/rush/yugipedia1030764.yaml
+++ b/data/rush/yugipedia1030764.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分のデッキのカードが１０枚以上の場合、手札の効果モンスター（炎属性）１体を墓地へ送って発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分は１枚ドローする。その後、自分の墓地の「ＳＰアシスタント・アーチ」を全て好きな順番でデッキの下に戻す事ができる。戻した場合、さらに自分は２枚ドローする。
   ko:
   zh-TW:
   zh-CN:
