--- a/data/rush/yugipedia1030765.yaml
+++ b/data/rush/yugipedia1030765.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカードを召喚したターンに発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の墓地のモンスター（炎属性）１体を選んでデッキの上に戻す。その後、自分の墓地に「ＳＰアシスタント・アーチ」がいる場合、自分の墓地のモンスター（炎属性）２体を選んで好きな順番でデッキの上に戻す事ができる。
   ko:
   zh-TW:
   zh-CN:
