--- a/data/rush/yugipedia1030766.yaml
+++ b/data/rush/yugipedia1030766.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    モンスターを含む手札を３枚まで墓地へ送って発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカードの攻撃力は次の相手ターン終了時まで、［この効果の条件で墓地へ送ったモンスターのレベルの合計］×１００アップする。この効果の条件で種族が異なるモンスター３体を墓地へ送った場合、さらにこのカードは次の相手ターン終了時まで相手の効果では破壊されない。
   ko:
   zh-TW:
   zh-CN:
@@ -50,7 +52,8 @@ materials:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    モンスター（水族）＋モンスター（雷族）
   ko:
   zh-TW:
   zh-CN:
