--- a/rush.yaml
+++ b/rush.yaml
@@ -79344,6 +79344,10 @@ sets:
     set_name: Strongest Battle Deck Manabu - Chemist-Meow Draw of Flames!
     rarities:
     - Common
+  - set_number: RD/HC01-JP003
+    set_name: High-Grade Collection
+    rarities:
+    - Secret Rare
   ko:
   - set_number: RD/SD04-KR023
     set_name: Strongest Battle Deck Manabu - Chemist-Meow Draw of Flames!
@@ -125938,7 +125942,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分のデッキのカードが１０枚以上の場合、手札の効果モンスター（炎属性）１体を墓地へ送って発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -125950,7 +125955,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分は１枚ドローする。その後、自分の墓地の「ＳＰアシスタント・アーチ」を全て好きな順番でデッキの下に戻す事ができる。戻した場合、さらに自分は２枚ドローする。
   ko:
   zh-TW:
   zh-CN:
@@ -126000,7 +126006,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカードを召喚したターンに発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -126012,7 +126019,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の墓地のモンスター（炎属性）１体を選んでデッキの上に戻す。その後、自分の墓地に「ＳＰアシスタント・アーチ」がいる場合、自分の墓地のモンスター（炎属性）２体を選んで好きな順番でデッキの上に戻す事ができる。
   ko:
   zh-TW:
   zh-CN:
@@ -126062,7 +126070,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    モンスターを含む手札を３枚まで墓地へ送って発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -126074,7 +126083,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカードの攻撃力は次の相手ターン終了時まで、［この効果の条件で墓地へ送ったモンスターのレベルの合計］×１００アップする。この効果の条件で種族が異なるモンスター３体を墓地へ送った場合、さらにこのカードは次の相手ターン終了時まで相手の効果では破壊されない。
   ko:
   zh-TW:
   zh-CN:
@@ -126092,7 +126102,8 @@ materials:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    モンスター（水族）＋モンスター（雷族）
   ko:
   zh-TW:
   zh-CN:
