--- a/data/rush/16782.yaml
+++ b/data/rush/16782.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When a Level 7 or higher Attack Position Warrior Type monster(s) on your field is destroyed by an opponent's attack or their Trap Card effect.
+    When an Attack Position Level 7 or higher Warrior Type monster(s) on your field is destroyed by an opponent's attack or their Trap Card effect.
   de:
   es:
   fr:
