--- a/data/rush/19565.yaml
+++ b/data/rush/19565.yaml
@@ -27,7 +27,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Change up to 2 Level 8 or lower Attack Position monsters on your opponent's field to face-up Defense Position.
+    Change up to 2 Attack Position Level 8 or lower monsters on your opponent's field to face-up Defense Position.
   de:
   es:
   fr:
