--- a/data/rush/18574.yaml
+++ b/data/rush/18574.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 Dragon Type monster from your hand to your opponent's field in face-up Defense Position. Then, you can return 1 Level 8 or lower Attack Position monster from your opponent's field to the owner's hand.
+    Special Summon 1 Dragon Type monster from your hand to your opponent's field in face-up Defense Position. Then, you can return 1 Attack Position Level 8 or lower monster from your opponent's field to the owner's hand.
   de:
   es:
   fr:
