--- a/rush.yaml
+++ b/rush.yaml
@@ -42162,7 +42162,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When a Level 7 or higher Attack Position Warrior Type monster(s) on your field is destroyed by an opponent's attack or their Trap Card effect.
+    When an Attack Position Level 7 or higher Warrior Type monster(s) on your field is destroyed by an opponent's attack or their Trap Card effect.
   de:
   es:
   fr:
@@ -47366,6 +47366,8 @@ effect:
   zh-CN:
 card_type: Trap
 property: Normal
+series:
+- Mirror Trap
 legend: true
 images:
 - index: 1
@@ -91016,7 +91018,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 Dragon Type monster from your hand to your opponent's field in face-up Defense Position. Then, you can return 1 Level 8 or lower Attack Position monster from your opponent's field to the owner's hand.
+    Special Summon 1 Dragon Type monster from your hand to your opponent's field in face-up Defense Position. Then, you can return 1 Attack Position Level 8 or lower monster from your opponent's field to the owner's hand.
   de:
   es:
   fr:
@@ -94633,7 +94635,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    The equipped monster gains ATK equal to [the number of face-up Dragon Type monsters on the field] x 200. When the equipped monster attacks a Level 7 or higher Defense Position monster, inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference).
+    The equipped monster gains ATK equal to [the number of face-up Dragon Type monsters on the field] x 200. When the equipped monster attacks a Defense Position Level 7 or higher monster, inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference).
   de:
   es:
   fr:
@@ -95847,6 +95849,7 @@ card_type: Trap
 property: Normal
 series:
 - Cat
+- Mirror Trap
 images:
 - index: 1
   image: StrayForce-RDKP12-JP-C.png
@@ -101814,7 +101817,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When an opponent's monster declares an attack while they have 3 Attack Position monsters on their field.
+    When an opponent's monster declares an attack while your opponent has 3 Attack Position monsters on their field.
   de:
   es:
   fr:
@@ -101842,6 +101845,8 @@ effect:
   zh-CN:
 card_type: Trap
 property: Normal
+series:
+- Mirror Trap
 images:
 - index: 1
   image: RadiantMirrorForce-RDVSP1-JP-SR.png
@@ -117947,7 +117952,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Change up to 2 Level 8 or lower Attack Position monsters on your opponent's field to face-up Defense Position.
+    Change up to 2 Attack Position Level 8 or lower monsters on your opponent's field to face-up Defense Position.
   de:
   es:
   fr:
