--- a/data/cards/09742784.yaml
+++ b/data/cards/09742784.yaml
@@ -33,7 +33,9 @@ text:
   zh-TW: |-
     此卡名的①②效果，１回合僅限使用１次其中１個效果。①：可在此卡做為同步素材被送至墓地的狀況下發動。從牌組將１隻「廢品」怪獸加入手牌。②：在此卡存在於墓地的狀況下，可將１張手牌送至墓地發動。特殊召喚此卡。透過此效果特殊召喚的此卡，在從場上離開的狀況下將被除外。
   zh-CN: |-
-    此卡名的①②效果1回合1次，仅可使用其中1个。①：此卡作为同步素材被送至墓地的情况下可以发动。从牌组将1只“废品”怪兽加入手牌。②：此卡存在于墓地的情况下，将1张手牌送至墓地可以发动。将此卡特殊召唤。以此效果特殊召唤的此卡离开场上的情况下，将其除外。
+    此卡名的①②效果１回合１次，仅可使用其中１个。
+    ①：此卡作为同步素材被送至墓地的情况下可以发动。从牌组将１只“废品”怪兽加入手牌。
+    ②：此卡存在于墓地的情况下，将１张手牌送至墓地可以发动。将此卡特殊召唤。以此效果特殊召唤的此卡从场上离开的情况下，将其除外。
 card_type: Monster
 monster_type_line: Machine / Tuner / Effect
 attribute: FIRE
