--- a/data/cards/15397015.yaml
+++ b/data/cards/15397015.yaml
@@ -33,7 +33,8 @@ text:
   zh-TW: |-
     在我方場上存在怪獸的狀況下，無法召喚・特殊召喚此卡。①：只要此卡存在於怪獸區，此期間雙方１回合可發動怪獸效果的次數，最多各為場上的怪獸的種類（儀式・融合・同步・超量・鐘擺・連結）的數量。
   zh-CN: |-
-    自己场上有怪兽存在的情况下，此卡不可召唤・特殊召唤。①：只要此卡存在于怪兽区域，在此期间，双方在1回合中各自可以发动的怪兽效果次数最多为场上怪兽的种类（仪式・融合・同步・超量・灵摆・连接）的数量。
+    自己场上存在怪兽的情况下，此卡不可召唤・特殊召唤。
+    ①：只要此卡存在于怪兽区域，在此期间，双方在１回合中各自可以发动的怪兽效果次数，最多为场上怪兽的种类（仪式・融合・同步・超量・灵摆・连接）的数量。
 card_type: Monster
 monster_type_line: Machine / Effect
 attribute: LIGHT
