--- a/data/cards/26847978.yaml
+++ b/data/cards/26847978.yaml
@@ -42,8 +42,10 @@ text:
     獸族・獸戰士族・鳥獸族怪獸２隻
     此卡名的①②效果，１回合各僅限使用１次。①：可在我方主要階段發動。從手牌特殊召喚１隻等級４以下的獸族・獸戰士族・鳥獸族怪獸。此效果發動後，在回合結束前我方僅限以獸族・獸戰士族・鳥獸族怪獸做為連結素材。②：可在此卡被送至墓地的狀況下發動。我方從牌組抽１張牌，其後選擇１張手牌送回牌組的最下方。
   zh-CN: |-
-    兽族・兽战士族・鸟兽族怪兽2只
-    此卡名的①②效果1回合仅可各使用1次。①：在自己的主要阶段可以发动。从手牌将1只等级4以下的兽族・兽战士族・鸟兽族怪兽特殊召唤。此效果发动后，直至回合结束时为止，自己仅可将兽族・兽战士族・鸟兽族怪兽作为连接素材。②：此卡被送至墓地的情况下可以发动。自己从牌组抽1张，然后挑选1张手牌放回牌组最下面。
+    兽族・兽战士族・鸟兽族怪兽２只
+    此卡名的①②效果１回合仅可各使用１次。
+    ①：在自己的主要阶段可以发动。从手牌将１只等级４以下的兽族・兽战士族・鸟兽族怪兽特殊召唤。此效果发动后，直至回合结束时为止，自己仅可将兽族・兽战士族・鸟兽族怪兽作为连接素材。
+    ②：此卡被送至墓地的情况下可以发动。自己抽１张。然后，挑选１张自己的手牌放回牌组最下面。
 card_type: Monster
 monster_type_line: Beast / Link / Effect
 attribute: EARTH
