--- a/data/cards/30680659.yaml
+++ b/data/cards/30680659.yaml
@@ -33,7 +33,10 @@ text:
   zh-TW: |-
     此卡名的①②③效果，１回合各僅限使用１次。①：可在我方場上存在「勇者衍生物」的狀況下發動。從手牌特殊召喚此卡。②：可將手牌・墓地的此卡除外發動。選擇我方牌組・墓地的１張「拉瑪至崇頌之儀」加入手牌。③：可在我方場上存在「勇者衍生物」的狀況下發動。從牌組選擇１張寫有「勇者衍生物」的衍生物名的場地魔法卡以正面表示置於我方場地區。
   zh-CN: |-
-    此卡名的①②③效果1回合仅可各使用1次。①：自己场上有"勇者衍生物"存在的情况下可以发动。从手牌将此卡特殊召唤。②：将手牌・墓地的此卡除外可以发动。从自己的牌组・墓地挑选1张"菈玛至崇颂之仪"加入手牌。③：自己场上有"勇者衍生物"存在的情况下可以发动。从牌组挑选1张记载有"勇者衍生物"的衍生物名的场地魔法卡，以表侧表示放在自己的场地区域。
+    此卡名的①②③效果１回合仅可各使用１次。
+    ①：自己场上存在“勇者衍生物”的情况下可以发动。从手牌将此卡特殊召唤。
+    ②：将手牌・墓地的此卡除外可以发动。从自己的牌组・墓地将１张“菈玛至崇颂之仪”加入手牌。
+    ③：自己场上存在“勇者衍生物”的情况下可以发动。从牌组将１张记载有“勇者衍生物”的衍生物名的场地魔法卡，以表侧表示放在自己的场地区域。
 card_type: Monster
 monster_type_line: Spellcaster / Effect
 attribute: WATER
