--- a/data/cards/33331231.yaml
+++ b/data/cards/33331231.yaml
@@ -12,7 +12,7 @@ name:
   ko: 섬술병기－<ruby>H.A.M.P.<rt>햄프</rt></ruby>
   ko_rr: Seomsulbyeonggi - Hempeu
   zh-TW:
-  zh-CN: 闪术兵器-汉普
+  zh-CN: 闪术兵器－H.A.M.P.
 text:
   en: |-
     (This card is always treated as a "Sky Striker" card.)
@@ -39,9 +39,10 @@ text:
   zh-TW: |-
     此卡名在規則上也視為「閃刀」卡。透過此卡名①方法的特殊召喚，１回合僅限１次。①：在我方場上存在「閃刀姬」怪獸的狀況下，可解放我方或對方場上的１隻怪獸，從手牌特殊召喚此卡至該控制者的場上。②：可在此卡因戰鬥被破壞時，將對方場上的１張卡做為對象發動。破壞該卡。
   zh-CN: |-
-    这个卡名在规则上也当作「闪刀」卡使用。这个卡名的①的方法的特殊召唤1回合只能有1次。
-    ①：自己场上有「闪刀姬」怪兽存在的场合，这张卡可以把自己或者对方场上1只怪兽解放，从手卡往那个控制者场上特殊召唤。
-    ②：这张卡被战斗破坏时，以对方场上1张卡为对象才能发动。那张卡破坏。
+    此卡名在规则上也视为“闪刀”卡。
+    此卡名以①方法的特殊召唤１回合仅可进行１次。
+    ①：自己场上存在“闪刀姬”怪兽的情况下，此卡可以解放自己或对手场上的１只怪兽，从手牌特殊召唤至其控制者的场上。
+    ②：此卡因战斗被破坏时，以对手场上的１张卡为对象可以发动。将该卡破坏。
 card_type: Monster
 monster_type_line: Machine / Effect
 attribute: DARK
