--- a/data/cards/42166000.yaml
+++ b/data/cards/42166000.yaml
@@ -12,7 +12,7 @@ name:
   ko: 갓 슬라임
   ko_rr: Gat Seullaim
   zh-TW:
-  zh-CN: 神·史莱姆
+  zh-CN: 神・史莱姆
 text:
   en: |-
     1 Aqua monster + 1 Level 10 WATER monster
@@ -46,11 +46,11 @@ text:
     ●可在解放我方場上的１隻攻擊力０的水族・等級１０怪獸的狀況下，從額外牌組特殊召喚。
     ①：在升級召喚怪獸的狀況下，可將此卡視為３隻解放。②：此卡不會因戰鬥被破壞，對方無法將我方場上的「神・史萊姆」以外的怪獸選為攻擊對象，也無法將其做為效果對象。
   zh-CN: |-
-    水族怪兽＋水属性·10星怪兽
-    这张卡用融合召唤以及以下方法才能从额外卡组特殊召唤。
-    ●把自己场上1只攻击力0的水族·10星怪兽解放的场合可以从额外卡组特殊召唤。
-    ①：怪兽上级召唤的场合，这张卡可以作为3只的数量解放。
-    ②：这张卡不会被战斗破坏，对方不能选择「神·史莱姆」以外的自己场上的怪兽作为攻击对象，也不能作为效果的对象。
+    水族怪兽＋水属性・等级１０怪兽
+    此卡从额外牌组仅可通过融合召唤及以下方法特殊召唤。
+    ●解放自己场上１只攻击力０的水族・等级１０怪兽的情况下，可从额外牌组特殊召唤。
+    ①：上级召唤需要解放３只以上怪兽的怪兽的情况下，此卡可作为３只解放。
+    ②：此卡不会因战斗被破坏，对手怪兽不可将自己场上“神・史莱姆”以外的怪兽选择为攻击对象，对手不可将其作为效果的对象。
 card_type: Monster
 monster_type_line: Aqua / Fusion / Effect
 attribute: WATER
