--- a/data/cards/42790071.yaml
+++ b/data/cards/42790071.yaml
@@ -33,7 +33,9 @@ text:
   zh-TW: |-
     此卡名的①②效果，１回合各僅限使用１次。①：可在我方發動陷阱卡的狀況下發動。從手牌特殊召喚此卡。②：可在此卡特殊召喚成功的狀況下發動。從牌組以守備表示特殊召喚１隻「幻變騷靈 多重偽裝者」以外的「幻變騷靈」怪獸。發動此效果的回合，我方可特殊召喚的怪獸僅限「幻變騷靈」怪獸。
   zh-CN: |-
-    此卡名的①②效果1回合仅可各使用1次。①：自己发动陷阱卡的情况下可以发动。从手牌将此卡特殊召唤。②：此卡特殊召唤成功的情况下可以发动。从牌组将“幻变骚灵・多重伪装者”以外的1只“幻变骚灵”怪兽以守备表示特殊召唤。发动此效果的回合中，自己仅可特殊召唤“幻变骚灵”怪兽。
+    此卡名的①②效果１回合仅可各使用１次。
+    ①：自己发动陷阱卡的情况下可以发动。从手牌将此卡特殊召唤。
+    ②：此卡特殊召唤的情况下可以发动（发动此效果的回合中，自己仅可特殊召唤“幻变骚灵”怪兽）。从牌组将“幻变骚灵・多重伪装者”以外的１只“幻变骚灵”怪兽以守备表示特殊召唤。
 card_type: Monster
 monster_type_line: Spellcaster / Effect
 attribute: DARK
