--- a/data/cards/48686504.yaml
+++ b/data/cards/48686504.yaml
@@ -33,7 +33,7 @@ text:
   zh-TW: |-
     1回合1次，可释放以表侧表示存在于我方场上的1只植物族怪兽并发动。从牌组中特殊召唤1只植物族怪兽。
   zh-CN: |-
-    1回合1次，可以在解放自己场上的1只表侧表示的植物族怪兽后发动。从牌组将1只植物族怪兽特殊召唤。
+    ①：１回合１次，解放自己场上的１只表侧表示的植物族怪兽可以发动。从牌组将１只植物族怪兽特殊召唤。
 card_type: Monster
 monster_type_line: Plant / Effect
 attribute: FIRE
