--- a/data/cards/52445243.yaml
+++ b/data/cards/52445243.yaml
@@ -12,7 +12,7 @@ name:
   ko: 트라이에지 마스터
   ko_rr: teuraieji maseuteo
   zh-TW:
-  zh-CN: 三锋刃能手
+  zh-CN: 三刃圣手
 text:
   en: |-
     1 Tuner + 1+ non-Tuner monsters
@@ -72,11 +72,12 @@ text:
     ●等級２與等級４：我方從牌組抽１張牌。
     ●等級３與等級３：將此卡視為協調。
   zh-CN: |-
-    调整+1只以上调整以外的怪兽
-    这个卡名的效果1回合只能使用1次。①：这张卡同调召唤成功的场合可以发动。根据用于这张卡的同调召唤的一组同调素材怪兽的等级组合适用以下的效果。是使用3只以上作为素材的场合则全部适用以下的效果。
-    ●等级1和等级5：选这张卡以外的场上的1张卡破坏。
-    ●等级2和等级4：自己从卡组抽1张。
-    ●等级3和等级3：这张卡当作调整使用。
+    协调＋协调以外的怪兽１只以上
+    此卡名的效果１回合仅可使用１次。
+    ①：此卡同步召唤的情况下可以发动。根据此卡的同步召唤所使用的同步素材怪兽之等级组合，适用以下效果。以３只以上作为素材的情况下，适用以下所有效果。
+    ●等级１和等级５：将场上的１张其他卡破坏。
+    ●等级２和等级４：自己抽１张。
+    ●等级３和等级３：此卡视为协调。
 card_type: Monster
 monster_type_line: Warrior / Synchro / Effect
 attribute: LIGHT
