--- a/data/cards/58699500.yaml
+++ b/data/cards/58699500.yaml
@@ -42,8 +42,11 @@ text:
     等級３怪獸２隻
     此卡名的③效果，１回合僅限使用１次。①：此卡連結指向的怪獸不會因效果被破壞。②：在場上的此卡因戰鬥或對方的效果被破壞的狀況下，可將我方場上的１張卡送至墓地作為替代。③：可從牌組將１隻等級３怪獸送至墓地，將場上的１隻「彼岸」怪獸做為對象發動。該怪獸的攻擊力・守備力在回合結束前，依據送至墓地的怪獸的各數值進行提升。
   zh-CN: |-
-    等级3怪兽2只
-    此卡名的③效果1回合仅可使用1次。①：此卡连接端的怪兽不会因效果被破坏。②：场上的此卡将被战斗或对手的效果破坏的情况下，可以将自己场上的1张卡送至墓地作为代替。③：从牌组将1只等级3怪兽送至墓地，以场上的1只“彼岸”怪兽为对象可以发动。该怪兽的攻击力・守备力直至回合结束时为止，分别上升送至墓地的怪兽的相应数值。
+    等级３怪兽２只
+    此卡名的③效果１回合仅可使用１次。
+    ①：此卡连接端的怪兽不会因效果被破坏。
+    ②：场上的此卡将被战斗或对手的效果破坏的情况下，作为代替可将自己场上的１张卡送至墓地。
+    ③：从牌组将１只等级３怪兽送至墓地，以场上的１只“彼岸”怪兽为对象可以发动。该怪兽的攻击力・守备力直至回合结束时为止，分别上升送至墓地的怪兽的相应数值。
 card_type: Monster
 monster_type_line: Fairy / Link / Effect
 attribute: DARK
