--- a/data/cards/81470373.yaml
+++ b/data/cards/81470373.yaml
@@ -33,7 +33,8 @@ text:
   zh-TW: |-
     此卡名的效果１回合僅限使用１次。①：在我方場上不存在怪獸的狀況下，可從手牌將１隻此卡以外的「黑羽」怪獸除外發動。從牌組選擇１張「黑旋風」，以正面表示置於我方魔法＆陷阱區。其後，不需解放召喚手牌的此卡，或將手牌的此卡送至墓地。結束階段，透過此效果發動的「黑旋風」將被送至墓地，我方受到１０００傷害。此效果發動後，在回合結束前我方可從額外牌組特殊召喚的怪獸僅限闇屬性怪獸。
   zh-CN: |-
-    此卡名的效果1回合仅可使用1次。①：自己场上不存在怪兽的情况下，从手牌将此卡以外的1只“黑羽”怪兽除外可以发动。从牌组将1张“黑旋风”以表侧表示放在自己的魔法与陷阱区域。然后，将手牌的此卡无需解放迳行召唤，或送至墓地。以此效果所放的“黑旋风”在结束阶段会被送至墓地，自己受到1000伤害。此效果发动后，直至回合结束时为止自己从额外牌组仅可特殊召唤暗属性怪兽。
+    此卡名的效果１回合仅可使用１次。
+    ①：自己场上不存在怪兽的情况下，从手牌将１只其他的“黑羽”怪兽除外可以发动。从牌组将１张“黑旋风”以表侧表示放在自己的魔法与陷阱区域。然后，将手牌的此卡无需解放进行召唤，或送至墓地。以此效果所放的“黑旋风”在结束阶段会被送至墓地，且自己受到１０００伤害。此效果发动后，直至回合结束时为止自己从额外牌组仅可特殊召唤暗属性怪兽。
 card_type: Monster
 monster_type_line: Winged Beast / Effect
 attribute: DARK
