--- a/data/cards/kdb11927.yaml
+++ b/data/cards/kdb11927.yaml
@@ -33,7 +33,10 @@ text:
   zh-TW: |-
     此卡無法特殊召喚。在通常召喚此卡的狀況下，必須解放我方場上的３隻怪獸召喚至我方場上或解放對方場上的３隻怪獸召喚至對方場上，召喚的此卡的控制權在下一個回合的結束階段回到原本的持有者。①：此卡無法攻擊，不會成為對方的攻擊・效果的對象。②：可解放此卡發動。忽略召喚條件，從手牌・牌組特殊召喚１隻「拉之翼神龍」，攻擊力・守備力變為４０００。
   zh-CN: |-
-    此卡不可特殊召唤。通常召唤此卡的情况下，必须解放自己场上的3只怪兽并召唤至自己场上，或解放对手场上的3只怪兽并召唤至对手场上，召唤的此卡其控制权将在下一个回合的结束阶段还给原本的持有者。①：此卡不可攻击，不会成为对手的攻击・效果的对象。②：解放此卡可以发动。从手牌・牌组将1只“拉之翼神龙”无视召唤条件，将其攻击力・守备力改成4000并特殊召唤。
+    此卡不可特殊召唤。
+    通常召唤此卡的情况下，必须从自己・对手其中一方的场上解放３只怪兽并召唤至该玩家的场上，召唤的此卡其控制权将在下个回合的结束阶段还给原本的持有者。
+    ①：此卡不可攻击，对手怪兽不可将此卡作为攻击对象，对手不可将此卡作为效果的对象。
+    ②：解放此卡可以发动。从手牌・牌组将１只“拉之翼神龙”无视召唤条件，将其攻击力・守备力改成４０００并特殊召唤。
 card_type: Monster
 monster_type_line: Divine-Beast / Effect
 attribute: DIVINE
