--- a/data/cards/14558127.yaml
+++ b/data/cards/14558127.yaml
@@ -66,7 +66,8 @@ text:
     ●從牌組特殊召喚怪獸的效果
     ●從牌組將卡送至墓地的效果
   zh-CN: |-
-    此卡名的效果1回合仅可使用1次。①：包含以下其中任意效果的魔法・陷阱・怪兽的效果发动时，将此卡从手牌中舍弃可以发动。将该效果无效。
+    此卡名的效果１回合仅可使用１次。
+    ①：包含以下其中任意效果的魔法・陷阱・怪兽的效果发动时，从手牌将此卡舍弃可以发动。将该效果无效。
     ●从牌组将卡加入手牌的效果
     ●从牌组将怪兽特殊召唤的效果
     ●从牌组将卡送至墓地的效果
