--- a/data/cards/20366274.yaml
+++ b/data/cards/20366274.yaml
@@ -43,7 +43,10 @@ text:
     此卡僅限透過融合召喚的方式從額外牌組特殊召喚。①：可在此卡特殊召喚成功的狀況下發動。從牌組將１張「影依」卡送至墓地。②：此卡與被特殊召喚的怪獸進行戰鬥的傷害步驟開始時發動。破壞該怪獸。③：在此卡被送至墓地的狀況下，可將我方墓地的１張「影依」魔法・陷阱卡做為對象發動。將該卡加入手牌。
   zh-CN: |-
     “影依”怪兽＋光属性怪兽
-    此卡仅可通过融合召唤从额外牌组中特殊召唤。①：在此卡特殊召唤成功的情况下可以发动。从牌组中将1张“影依”卡送至墓地。②：在此卡与被特殊召唤的怪兽进行战斗的伤害步骤开始时发动。将该怪兽破坏。③：在此卡被送至墓地的情况下，可以自己墓地的1张“影依”魔法・陷阱卡为对象发动。将该卡加入手牌。
+    此卡从额外牌组仅可通过融合召唤来特殊召唤。
+    ①：此卡特殊召唤的情况下可以发动。从牌组中将１张“影依”卡送至墓地。
+    ②：此卡与被特殊召唤的怪兽进行战斗的伤害步骤开始时发动。将该怪兽破坏。
+    ③：此卡被送至墓地的情况下，以自己墓地的１张“影依”魔法・陷阱卡为对象可以发动。将该卡加入手牌。
 card_type: Monster
 monster_type_line: Fairy / Fusion / Effect
 attribute: LIGHT
