--- a/data/cards/26050548.yaml
+++ b/data/cards/26050548.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN: 巨毒多头龙
+  zh-CN: 额外毒海德拉
 text:
   en: |-
     2+ monsters you control, Special Summoned from the Extra Deck
@@ -42,8 +42,9 @@ text:
     我方場上從額外牌組被特殊召喚的怪獸×２隻以上
     ①：只要此卡存在於怪獸區，與對方場上做為此卡融合素材的怪獸種類（融合・同步・超量・鐘擺・連結）相同種類的怪獸攻擊力就依據原本的攻擊力數值進行降低。②：可在此卡給予對方１０００以上的戰鬥傷害時發動。每受到１０００傷害，我方從牌組抽１張牌。
   zh-CN: |-
-    从额外卡组特殊召唤的自己场上的怪兽×2只以上
-    ①：只要这张卡在怪兽区存在，与这张卡的融合素材的怪兽的种类（融合·同调·多维·灵摆·链接）相同种类的对手场上的怪兽，攻击力就下降其原攻击力的数值。②：这张卡给予对手1000以上的战斗伤害时可以发动。那个伤害每有1000自己就从卡组抽1张。
+    被从额外牌组特殊召唤的自己场上的怪兽×２只以上
+    ①：只要此卡存在于怪兽区域，对手场上种类（融合・同步・超量・灵摆・连接）和作为此卡的融合素材的怪兽种类相同的怪兽，攻击力下降相当于其原本攻击力的数值。
+    ②：此卡给予对手１０００以上的战斗伤害时可以发动。该伤害每有１０００，自己抽１张。
 card_type: Monster
 monster_type_line: Reptile / Fusion / Effect
 attribute: WATER
