--- a/data/cards/32181268.yaml
+++ b/data/cards/32181268.yaml
@@ -33,7 +33,9 @@ text:
   zh-TW: |-
     此卡無法特殊召喚。①：只要此卡存在於怪獸區，雙方就無法發動靈魂怪獸以外的怪獸的效果。②：在此卡召喚・反轉過的回合的結束階段發動。將此卡送回持有者的手牌。
   zh-CN: |-
-    此卡不可特殊召唤。①：只要此卡存在于怪兽区域，双方不可发动灵魂怪兽以外的怪兽的效果。②：此卡召唤・反转的回合的结束阶段发动。将此卡放回持有者的手牌。
+    此卡不可特殊召唤。
+    ①：只要此卡存在于怪兽区域，双方不可发动灵魂怪兽以外的怪兽的效果。
+    ②：此卡召唤・反转的回合的结束阶段发动。将此卡放回手牌。
 card_type: Monster
 monster_type_line: Rock / Spirit / Effect
 attribute: EARTH
