--- a/data/cards/33365932.yaml
+++ b/data/cards/33365932.yaml
@@ -33,7 +33,7 @@ text:
   zh-TW: |-
     ①：在此卡存在於墓地的狀況下，１回合１次，可支付５００LP發動。在此卡存在於墓地的狀況下，從牌組將１隻「火山性子彈」加入手牌。
   zh-CN: |-
-    ①：这张卡存在于墓地的情况下，1个回合1次，支付500LP可以发动。这张卡存在于墓地的情况下，从牌组把1只“火山性子弹”加入手牌。
+    ①：此卡存在于墓地的情况下，１回合１次，支付５００LP可以发动。此卡存在于墓地的情况下，从牌组将１只“火山性子弹”加入手牌。
 card_type: Monster
 monster_type_line: Pyro / Effect
 attribute: FIRE
