--- a/data/cards/38342335.yaml
+++ b/data/cards/38342335.yaml
@@ -42,8 +42,10 @@ text:
     卡名不同的怪獸２隻以上
     此卡名的①效果，１回合僅限使用１次。①：在此卡連結召喚成功的狀況下，可捨棄１張手牌，將場上的１張卡做為對象發動。將該卡送回持有者的牌組。在此效果發動時此卡處於相互連結狀態的狀況下，我方另可從牌組抽１張牌。②：只要場上有處於相互連結狀態的「夢魘曲」怪獸存在，我方抽牌階段的通常抽牌的張數就變為該「夢魘曲」怪獸的種類的數量。
   zh-CN: |-
-    卡名不同的怪兽2只以上
-    此卡名的①效果1回合仅可使用1次。①：此卡连接召唤成功的情况下，舍弃1张手牌，以场上的1张卡为对象可以发动。将该卡放回持有者的牌组。此效果发动时此卡为相互连接状态的情况下，自己可进而从牌组抽1张。②：只要场上有相互连接状态的“梦魇曲”怪兽存在，自己抽牌阶段的通常抽牌的张数就变为该“梦魇曲”怪兽种类的数量。
+    卡名不同的怪兽２只以上
+    此卡名的①效果１回合仅可使用１次。
+    ①：此卡连接召唤的情况下，舍弃１张手牌，以场上的１张卡为对象可以发动。将该卡放回牌组。此效果发动时此卡为相互连接状态的情况下，进而可自己抽１张。
+    ②：只要有相互连接状态的“梦魇曲”怪兽存在，自己抽牌阶段的通常抽牌的张数就变为该“梦魇曲”怪兽种类的数量。
 card_type: Monster
 monster_type_line: Fiend / Link / Effect
 attribute: DARK
