--- a/data/cards/40177746.yaml
+++ b/data/cards/40177746.yaml
@@ -12,7 +12,7 @@ name:
   ko: 이바
   ko_rr: Iba
   zh-TW:
-  zh-CN: 地外生命
+  zh-CN: 异娃
 text:
   en: |-
     If this card is sent to the GY: You can banish up to 2 other LIGHT Fairy monsters from your field and/or GY; add the same number of Level 2 or lower LIGHT Fairy monsters with different names from your Deck to your hand, except "Eva". You can only use this effect of "Eva" once per turn.
@@ -33,7 +33,8 @@ text:
   zh-TW: |-
     此卡名的效果１回合僅限使用１次。①：在此卡被送至墓地的狀況下，可將我方場上・墓地的最多２隻此卡以外的天使族・光屬性怪獸除外發動。依據除外的怪獸的數量，從牌組將「外星生命體」以外的等級２以下的天使族・光屬性怪獸加入手牌（同名卡最多１張）。
   zh-CN: |-
-    这个卡名的效果1回合只能使用1次。①：这张卡被送去墓地的场合，把这张卡以外的自己的场上·墓地最多2只天使族·光属性怪兽除外才能发动。把除外数量的「イーバ」以外的2星以下的天使族·光属性怪兽从卡组加入手卡（同名卡最多1张）。
+    此卡名的效果１回合仅可使用１次。
+    ①：此卡被送至墓地的情况下，将自己场上・墓地此卡以外的最多２只天使族・光属性怪兽除外可以发动。依所除外的数量，从牌组将“异娃”以外的等级２以下的天使族・光属性怪兽加入手牌（同名卡最多１张）。
 card_type: Monster
 monster_type_line: Fairy / Effect
 attribute: LIGHT
