--- a/data/cards/55920742.yaml
+++ b/data/cards/55920742.yaml
@@ -33,7 +33,10 @@ text:
   zh-TW: |-
     此卡名的①②效果，１回合各僅限使用１次。①：可解放我方場上的１隻「龐.克.」怪獸發動。從手牌特殊召喚此卡。②：可將手牌・場上的此卡送至墓地發動。選擇１張我方手牌送至墓地，從牌組特殊召喚１隻等級８以外的「龐.克.」怪獸。③：１回合１次，可在此卡因戰鬥成功破壞對方怪獸時發動。依據該怪獸原本的攻擊力回復我方LP。
   zh-CN: |-
-    此卡名的①②效果1回合仅可各使用1次。①：解放自己场上的1只"朋.克."怪兽可以发动。从手牌将此卡特殊召唤。②：将手牌・场上的此卡送至墓地可以发动。挑选1张自己的手牌送至墓地，从牌组将1只等级8以外的"朋.克."怪兽特殊召唤。③：1回合1次，此卡战斗破坏对手怪兽时可以发动。自己的LP恢复相当于该怪兽原本攻击力的数值。
+    此卡名的①②效果１回合仅可各使用１次。
+    ①：解放自己场上的１只“朋.克.”怪兽可以发动。从手牌将此卡特殊召唤。
+    ②：将手牌・场上的此卡送至墓地可以发动。挑选１张自己的手牌送至墓地，从牌组将１只等级８以外的“朋.克.”怪兽特殊召唤。
+    ③：１回合１次，此卡战斗破坏对手怪兽时可以发动。依该怪兽原本攻击力的数值恢复自己的LP。
 card_type: Monster
 monster_type_line: Beast / Effect
 attribute: LIGHT
