--- a/data/cards/57314798.yaml
+++ b/data/cards/57314798.yaml
@@ -42,8 +42,10 @@ text:
     階級相同的同名「No.」超量怪獸×２
     ①：１回合１次，可去除此卡的１個超量素材發動。此卡的攻擊力在對方回合結束前，依據場上的超量怪獸的階級合計×１０００進行提升。②：可在此卡因效果被破壞時發動。將場上的所有怪獸全部破壞。其後，雙方選擇自身墓地的１張魔法・陷阱卡覆蓋在場上。③：在我方手牌・場上沒有卡的狀況下，可在對方怪獸的直接攻擊宣言時發動。從墓地特殊召喚此卡。
   zh-CN: |-
-    同阶级的同名“编号”超量怪兽×2
-    ①：1回合1次，去除此卡的1个超量素材可以发动。此卡的攻击力直至对手回合结束时为止，上升相当于场上超量怪兽阶级合计×1000的数值。②：此卡因效果被破坏时可以发动。将场上的怪兽全部破坏。然后，双方挑选自身墓地的1张魔法・陷阱卡放置在场上。③：自己的手牌・场上没有卡的情况下，对手怪兽的直接攻击宣言时可以发动。从墓地将此卡特殊召唤。
+    同阶级的同名“编号”超量怪兽×２
+    ①：１回合１次，去除此卡的１个超量素材可以发动。此卡的攻击力直至对手回合结束时为止，上升相当于场上超量怪兽的阶级合计×１０００的数值。
+    ②：此卡因效果被破坏时可以发动。将场上的怪兽全部破坏。然后，双方在自身墓地存在魔法・陷阱卡的情况下，将其中１张放置在场上。
+    ③：自己的手牌・场上没有卡的情况下，对手的直接攻击宣言时可以发动。从墓地将此卡特殊召唤。
 card_type: Monster
 monster_type_line: Dragon / Xyz / Effect
 attribute: LIGHT
