--- a/data/cards/58481572.yaml
+++ b/data/cards/58481572.yaml
@@ -33,7 +33,9 @@ text:
   zh-TW: |-
     此卡僅限透過「假面變換」的效果特殊召喚。①：只要此卡存在於怪獸區，被送至對方墓地的卡就將不前往墓地，而是被除外。②：１回合１次，可在對方在抽牌階段以外時，從牌組將卡加入手牌的狀況下發動。隨機選擇對方的１張手牌除外。
   zh-CN: |-
-    此卡仅可以“假面变换”的效果特殊召唤。①：只要此卡存在于怪兽区域，被送往对手墓地的卡不去墓地而直接被除外。②：1回合1次，对手在抽牌阶段以外从牌组将卡加入手牌的情况下可以发动。随机挑选对手的1张手牌除外。
+    此卡仅可以“假面变换”的效果特殊召唤。
+    ①：只要此卡存在于怪兽区域，被送至对手墓地的卡不去墓地而直接被除外。
+    ②：１回合１次，对手在抽牌阶段以外从牌组将卡加入手牌的情况下可以发动。随机将１张对手的手牌除外。
 card_type: Monster
 monster_type_line: Warrior / Fusion / Effect
 attribute: DARK
