--- a/data/cards/67441435.yaml
+++ b/data/cards/67441435.yaml
@@ -12,7 +12,7 @@ name:
   ko: 그로우업 벌브
   ko_rr:
   zh-TW:
-  zh-CN: 成长的鳞茎
+  zh-CN: 成长球茎
 text:
   en: |-
     If this card is in your GY: You can send the top card of your Deck to the GY, and if you do, Special Summon this card. You can only use this effect of "Glow-Up Bulb" once per Duel.
@@ -33,7 +33,8 @@ text:
   zh-TW: |-
     此卡名的效果，在決鬥中僅限使用１次。①：可在此卡存在於墓地的狀況下發動。將我方牌組最上方的卡送至墓地，特殊召喚此卡。
   zh-CN: |-
-    这个卡名的效果在决斗中只能使用1次。①：这张卡在墓地存在的场合才能发动。把自己卡组最上面的卡送去墓地，这张卡特殊召唤。
+    此卡名的效果在决斗中仅可使用１次。
+    ①：此卡存在于墓地的情况下可以发动。将自己的牌组最上面的卡送至墓地，将此卡特殊召唤。
 card_type: Monster
 monster_type_line: Plant / Tuner / Effect
 attribute: EARTH
