--- a/data/cards/71166481.yaml
+++ b/data/cards/71166481.yaml
@@ -12,7 +12,7 @@ name:
   ko: No.75 혹란의 가십 섀도우
   ko_rr: Neombeojeu Ilheun Daseot Hungnan-ui Gasip Syaedou
   zh-TW:
-  zh-CN: No.75 惑乱之风言暗影
+  zh-CN: 编号75 惑乱之流言暗影
 text:
   en: |-
     2+ Level 3 monsters
@@ -42,10 +42,10 @@ text:
     等級３怪獸×２隻以上
     此卡名的②效果，１回合僅限使用１次。①：１回合１次，對方發動怪獸的效果時，可去除此卡的２個超量素材發動。該效果變為「雙方玩家各從牌組抽１張牌」。②：可將我方場上的１隻此卡以外的「No.」超量怪獸做為對象發動。將此卡重疊至該怪獸下方做為超量素材（在此卡擁有超量素材的狀況下，也將其全部重疊做為超量素材）。
   zh-CN: |-
-    3星怪兽×2只以上
-    这个卡名的②的效果1回合只能使用1次。
-    ①：1回合1次，对方怪兽的效果发动时，把这张卡2个超量素材取除才能发动。那个效果变成「双方玩家各自从卡组抽1张」。
-    ②：以这张卡以外的自己场上1只「No.」超量怪兽为对象才能发动。把这张卡在那只怪兽下面重叠作为超量素材（这张卡持有超量素材的场合，那些也全部重叠作为超量素材）。
+    等级３怪兽×２只以上
+    此卡名的②效果１回合仅可使用１次。
+    ①：１回合１次，对手发动怪兽的效果时，去除此卡的２个超量素材可以发动。该效果变为“双方玩家各抽１张”。
+    ②：以自己场上的１只其他的“编号”超量怪兽为对象可以发动。将此卡作为该怪兽的超量素材（此卡拥有超量素材的情况下，那些素材也全部作为超量素材）。
 card_type: Monster
 monster_type_line: Spellcaster / Xyz / Effect
 attribute: WIND
