--- a/data/cards/71278040.yaml
+++ b/data/cards/71278040.yaml
@@ -45,7 +45,10 @@ text:
   zh-TW: |-
     此卡名的①②效果，１回合各僅限使用１次。①：可在此卡存在於手牌，我方連結召喚成功的狀況下發動。特殊召喚此卡至該連結怪獸連結指向的我方場上。②：可在此卡召喚・特殊召喚成功的狀況下發動。從牌組特殊召喚１隻「平行超越者」。③：透過「平行超越者」的效果特殊召喚的此卡的等級變為４，原本的攻擊力・守備力減半。
   zh-CN: |-
-    此卡名的①②效果1回合仅可各使用1次。①：此卡存在于手牌，自己连接召唤成功的情况下可以发动。将此卡特殊召唤至该连接怪兽连接端的自己场上。②：此卡召唤・特殊召唤成功的情况下可以发动。从牌组将1只“平行超越者”特殊召唤。③：因“平行超越者”的效果特殊召唤的此卡的等级变为4，原本的攻击力・守备力变为一半。
+    此卡名的①②效果１回合仅可各使用１次。
+    ①：此卡存在于手牌，自己连接召唤的情况下可以发动。将此卡特殊召唤至该连接怪兽连接端的自己场上。
+    ②：此卡召唤・特殊召唤的情况下可以发动。从牌组将１只“平行超越者”特殊召唤。
+    ③：以“平行超越者”的效果特殊召唤的此卡的等级变为４，原本的攻击力・守备力变为一半。
 card_type: Monster
 monster_type_line: Cyberse / Effect
 attribute: WIND
