--- a/data/cards/77235086.yaml
+++ b/data/cards/77235086.yaml
@@ -33,7 +33,9 @@ text:
   zh-TW: |-
     以「機械天使的儀式」降臨。①：在此卡因戰鬥破壞怪獸送至墓地的狀況下發動。給予對方等同於該怪獸原本守備力數值的傷害。②：可在此卡被解放的狀況下發動。從牌組將１隻天使族・光屬性怪獸加入手牌。
   zh-CN: |-
-    以“机械天使的仪式”降临。①：此卡战斗破坏怪兽并将其送至墓地的情况下发动。给予对手相当于该怪兽原本守备力数值的伤害。②：此卡被解放的情况下可以发动。从牌组将１只天使族・光属性怪兽加入手牌。
+    以“机械天使的仪式”降临
+    ①：此卡战斗破坏怪兽并将其送至墓地的情况下发动。给予对手相当于该怪兽原本守备力数值的伤害。
+    ②：此卡被解放的情况下可以发动。从牌组将１只天使族・光属性怪兽加入手牌。
 card_type: Monster
 monster_type_line: Fairy / Ritual / Effect
 attribute: LIGHT
