--- a/data/cards/79606837.yaml
+++ b/data/cards/79606837.yaml
@@ -42,8 +42,10 @@ text:
     協調＋協調以外的怪獸１隻以上
     ①：只要此卡存在於怪獸區，雙方從手牌・牌組被送至墓地的怪獸就將不前往墓地，而是被除外。②：在怪獸效果・魔法・陷阱卡發動時，可解放此卡發動。將該發動變為無效進行破壞。③：可在此卡被送至墓地的狀況下發動。從牌組將１隻儀式怪獸或１張儀式魔法卡加入手牌。
   zh-CN: |-
-    协调＋１只以上协调以外的怪兽
-    ①：只要此卡存在于怪兽区域，从双方手牌・牌组被送往墓地的怪兽不去墓地而直接被除外。②：怪兽的效果・魔法・陷阱卡发动时，解放此卡可以发动。将该发动无效并破坏。③：此卡被送至墓地的情况下可以发动。从牌组将１只仪式怪兽或１张仪式魔法卡加入手牌。
+    协调＋协调以外的怪兽１只以上
+    ①：只要此卡存在于怪兽区域，从双方手牌・牌组被送至墓地的怪兽不去墓地而直接被除外。
+    ②：怪兽的效果・魔法・陷阱卡发动时，解放此卡可以发动。将该发动无效并破坏。
+    ③：此卡被送至墓地的情况下可以发动。从牌组将１只仪式怪兽或１张仪式魔法卡加入手牌。
 card_type: Monster
 monster_type_line: Fairy / Synchro / Effect
 attribute: LIGHT
