--- a/data/cards/80532587.yaml
+++ b/data/cards/80532587.yaml
@@ -43,7 +43,10 @@ text:
     僅可在將我方場上的上述卡送至墓地的狀況下特殊召喚。我方１回合僅限特殊召喚１次「舊神 努茨」。①：１回合１次，可在我方主要階段發動。從手牌特殊召喚１隻等級４怪獸。②：在此卡被送至墓地的狀況下，可將場上的１張卡做為對象發動。破壞該卡。
   zh-CN: |-
     同步怪兽＋超量怪兽
-    仅在将自己场上的上述卡送至墓地的情况下可以特殊召唤。自己1回合仅可特殊召唤1次“旧神努茨”。①：1回合1次，在自己的主要阶段可以发动。从手牌将1只等级4怪兽特殊召唤。②：此卡被送至墓地的情况下，以场上的1张卡为对象可以发动。将该卡破坏。
+    仅可在将自己场上的上述卡送至墓地的情况下特殊召唤。
+    自己１回合仅可特殊召唤１次“旧神努茨”。
+    ①：１回合１次，在自己的主要阶段可以发动。从手牌将１只等级４怪兽特殊召唤。
+    ②：此卡被送至墓地的情况下，以场上的１张卡为对象可以发动。将该卡破坏。
 card_type: Monster
 monster_type_line: Fairy / Fusion / Effect
 attribute: LIGHT
