--- a/data/cards/84815190.yaml
+++ b/data/cards/84815190.yaml
@@ -42,8 +42,11 @@ text:
     協調＋協調以外的怪獸１隻以上
     此卡名的②效果，１回合僅限使用１次。①：１回合１次，可將場上的１張卡做為對象發動。破壞該卡。②：只要此卡以正面表示存在場上，可僅限１次在魔法・陷阱・怪獸成功發動效果時發動。將其發動變為無效進行破壞。③：在雙方的準備階段，可將我方墓地的１隻等級９以下的怪獸做為對象發動。將此卡送回持有者的額外牌組，特殊召喚該怪獸。
   zh-CN: |-
-    协调+1只以上协调以外的怪兽
-    此卡名的②效果1回合仅可使用1次。①：1回合1次，以场上的1张卡为对象可以发动。将该卡破坏。②：只要此卡在场上以表侧表示存在，仅限1次，魔法・陷阱・怪兽的效果发动时可以发动。将该发动无效并破坏。③：在双方的准备阶段，以自己墓地的1只等级9以下的怪兽为对象可以发动。将此卡放回持有者的额外牌组，将该怪兽特殊召唤。
+    协调＋协调以外的怪兽１只以上
+    此卡名的②效果１回合仅可使用１次。
+    ①：１回合１次，以场上的１张卡为对象可以发动。将该卡破坏。
+    ②：只要此卡在场上以表侧表示存在，仅限１次，魔法・陷阱・怪兽的效果发动时可以发动。将该发动无效并破坏。
+    ③：在双方的准备阶段，以自己墓地的１只等级９以下的怪兽为对象可以发动。将此卡放回额外牌组，将对象怪兽特殊召唤。
 card_type: Monster
 monster_type_line: Warrior / Synchro / Effect
 attribute: WIND
