--- a/data/cards/85692042.yaml
+++ b/data/cards/85692042.yaml
@@ -73,8 +73,13 @@ text:
     ●４個：從牌組將１張魔法・陷阱卡加入手牌。
     ②：可解放我方場上的１隻怪獸發動。從我方手牌・墓地選擇１隻等級４的「斬機」怪獸特殊召喚。
   zh-CN: |-
-    等级4怪兽×2只以上
-    此卡名的①②效果1回合仅可各使用1次。①：此卡超量召唤成功的情况下，去除以下数量的此卡的超量素材可以发动该效果。●2个：从牌组将1张"斩机"卡加入手牌。●3个：从牌组将1只等级4怪兽加入手牌。●4个：从牌组将1张魔法・陷阱卡加入手牌。②：解放自己场上的1只怪兽可以发动。从自己的手牌・墓地挑选1只等级4"斩机"怪兽特殊召唤。
+    等级４怪兽×２只以上
+    此卡名的①②效果１回合仅可各使用１次。
+    ①：此卡超量召唤的情况下，依以下数量去除此卡的超量素材，可以发动相应效果。
+    ●２个：从牌组将１张“斩机”卡加入手牌。
+    ●３个：从牌组将１只等级４怪兽加入手牌。
+    ●４个：从牌组将１张魔法・陷阱卡加入手牌。
+    ②：解放自己场上的１只怪兽可以发动。从自己的手牌・墓地将１只等级４的“斩机”怪兽特殊召唤。
 card_type: Monster
 monster_type_line: Cyberse / Xyz / Effect
 attribute: EARTH
