--- a/data/cards/86395581.yaml
+++ b/data/cards/86395581.yaml
@@ -39,7 +39,10 @@ text:
   zh-TW: |-
     此卡名在規則上也視為「靈使」卡。此卡名的①②效果，１回合各僅限使用１次。①：可從手牌捨棄此卡及１隻風屬性怪獸發動。從牌組將１隻「風靈媒師 薇茵」以外的守備力１５００以下的風屬性怪獸加入手牌。此效果發動後，在回合結束前我方無法發動風屬性以外的怪獸的效果。②：在此卡存在於手牌的狀況下，可在我方的風屬性怪獸因戰鬥被破壞時發動。特殊召喚此卡。
   zh-CN: |-
-    此卡的卡名在规则上也视为“灵使”卡。此卡名的①②效果1回合仅可各使用1次。①：从手牌将此卡与1只风属性怪兽舍弃可以发动。从牌组将“风灵媒师 薇茵”以外的1只守备力1500以下的风属性怪兽加入手牌。此效果发动后，直至回合结束时为止自己不可发动风属性以外的怪兽的效果。②：在此卡存在于手牌中的情况下，自己的风属性怪兽因战斗被破坏时可以发动。将此卡特殊召唤。
+    此卡名在规则上也视为“灵使”卡。
+    此卡名的①②效果１回合仅可各使用１次。
+    ①：从手牌将此卡与１只风属性怪兽舍弃可以发动。从牌组将“风灵媒师 薇茵”以外的守备力１５００以下的１只风属性怪兽加入手牌。此效果发动后，直至回合结束时为止自己不可发动风属性以外的怪兽的效果。
+    ②：自己的风属性怪兽因战斗被破坏时可以发动。从手牌将此卡特殊召唤。
 card_type: Monster
 monster_type_line: Spellcaster / Effect
 attribute: WIND
