--- a/data/cards/86937530.yaml
+++ b/data/cards/86937530.yaml
@@ -33,7 +33,8 @@ text:
   zh-TW: |-
     ①：可在此卡召喚成功時發動。從牌組將１隻攻擊力１８５０的魔法師族怪獸加入手牌。②：１回合１次，可將對方場上的１隻正面表示怪獸做為對象發動。對方可將１張與該怪獸同名的卡從自身的牌組・額外牌組送至墓地，將此效果變為無效。在未送至墓地的狀況下，將此卡及對象怪獸送回持有者的手牌。此效果在對方回合也可發動。
   zh-CN: |-
-    ①：此卡召唤成功时可以发动。从牌组将1只攻击力1850的魔法师族怪兽加入手牌。②：1回合1次，以对手场上的1只表侧表示怪兽为对象可以发动。对手可将该怪兽的1张同名卡从自身的牌组・额外牌组送至墓地，将此效果无效。没送至墓地的情况下，将此卡及对象的怪兽放回持有者手牌。此效果在对手回合中也可以发动。
+    ①：此卡召唤时可以发动。从牌组将１只攻击力１８５０的魔法师族怪兽加入手牌。
+    ②：在每个自己・对手回合中１次，以对手场上的１只表侧表示怪兽为对象可以发动。对手可从自身的牌组・额外牌组将该怪兽的１张同名卡送至墓地，将此效果无效。没送至墓地的情况下，将此卡及对象怪兽放回手牌。
 card_type: Monster
 monster_type_line: Spellcaster / Effect
 attribute: LIGHT
