--- a/data/cards/94145021.yaml
+++ b/data/cards/94145021.yaml
@@ -12,7 +12,7 @@ name:
   ko: 드롤 & 로크 버드
   ko_rr: Deurol Andeu Rokeu Beodeu
   zh-TW:
-  zh-CN: 小丑与锁鸟
+  zh-CN: 抽牌小丑与封锁鸟
 text:
   en: |-
     If a card(s) is added from the Main Deck to your opponent's hand, except during the Draw Phase (Quick Effect): You can send this card from your hand to the GY; for the rest of this turn, cards cannot be added from either player's Main Deck to the hand.
@@ -33,7 +33,7 @@ text:
   zh-TW: |-
     ①：在對方在抽牌階段以外從牌組將卡加入手牌的狀況下，可從手牌將此卡送至墓地發動。此回合，雙方無法從牌組將卡加入手牌。此效果在對方回合也可發動。
   zh-CN: |-
-    ①：对方在抽卡阶段以外从卡组把卡加入手卡的场合，把这张卡从手卡送去墓地才能发动。这个回合，双方不能从卡组把卡加入手卡。这个效果在对方回合也能发动。
+    ①：在自己・对手回合中，对手在抽牌阶段以外从牌组将卡加入手牌的情况下，从手牌将此卡送至墓地可以发动。此回合，双方不可从牌组将卡加入手牌。
 card_type: Monster
 monster_type_line: Spellcaster / Effect
 attribute: WIND
