--- a/data/cards/94977269.yaml
+++ b/data/cards/94977269.yaml
@@ -43,7 +43,10 @@ text:
     此卡僅限透過融合召喚的方式從額外牌組特殊召喚。①：場上的此卡不會因對方效果被破壞。②：只要此卡存在於怪獸區，在此期間雙方１回合僅限特殊召喚怪獸１次。③：在此卡被送至墓地的狀況下，可將我方墓地的１張「影依」魔法・陷阱卡做為對象發動。將該卡加入手牌。
   zh-CN: |-
     “影依”怪兽＋暗属性怪兽
-    此卡仅可通过融合召唤从额外牌组中特殊召唤。①：场上的此卡不会因对手的效果被破坏。②：只要此卡存在于怪兽区域，在此期间，双方1回合仅可将怪兽特殊召唤1次。③：在此卡被送至墓地的情况下，可以自己墓地的1张“影依”魔法・陷阱卡为对象发动。将该卡加入手牌。
+    此卡从额外牌组仅可通过融合召唤来特殊召唤。
+    ①：场上的此卡不会因对手的效果被破坏。
+    ②：只要此卡存在于怪兽区域，在此期间，双方１回合仅可特殊召唤怪兽１次。
+    ③：此卡被送至墓地的情况下，以自己墓地的１张“影依”魔法・陷阱卡为对象可以发动。将该卡加入手牌。
 card_type: Monster
 monster_type_line: Spellcaster / Fusion / Effect
 attribute: DARK
