--- a/data/cards/97268402.yaml
+++ b/data/cards/97268402.yaml
@@ -33,7 +33,7 @@ text:
   zh-TW: |-
     ①：在對方的主要階段將此卡從手牌送至墓地，可將對方場上的１隻效果怪獸做為對象發動。該對方怪獸的效果在回合結束前變為無效。
   zh-CN: |-
-    ①：在对手的主要阶段将此卡从手牌送至墓地，以对手场上的1只效果怪兽为对象可以发动。将该对手怪兽的效果直至回合结束时为止无效。
+    ①：在对手的主要阶段从手牌将此卡送至墓地，以对手场上的１只效果怪兽为对象可以发动。将该对手怪兽的效果直至回合结束时为止无效。
 card_type: Monster
 monster_type_line: Spellcaster / Tuner / Effect
 attribute: LIGHT
