--- a/data/cards/03285551.yaml
+++ b/data/cards/03285551.yaml
@@ -33,7 +33,8 @@ text:
   zh-TW: |-
     此卡名的卡１回合僅限發動１張，發動此卡的回合，我方無法發動被特殊召喚的怪獸以外的場上怪獸的效果。①：可在我方場上不存在「勇者衍生物」的狀況下發動。於我方場上特殊召喚１隻「勇者衍生物」（天使族・地・星４・攻／守２０００）。我方場上不存在「命運的旅途」的狀況下，可另從牌組選擇１張「命運的旅途」，以正面表示置於我方的魔法＆陷阱區。
   zh-CN: |-
-    此卡名的卡1回合仅可发动1张，发动此卡的回合中，自己不可发动被特殊召唤的怪兽以外的场上怪兽的效果。①：自己场上没有"勇者衍生物"存在的情况下可以发动。将1只"勇者衍生物"（天使族・地・星4・攻／守2000）特殊召唤至自己场上。自己场上没有"命运的旅途"存在的情况下，进而可从牌组挑选1张"命运的旅途"以表侧表示放在自己的魔法与陷阱区域。
+    此卡名的卡１回合仅可发动１张，发动此卡的回合中，自己不可发动被特殊召唤的怪兽以外的场上怪兽的效果。
+    ①：自己场上不存在“勇者衍生物”的情况下可以发动。将１只“勇者衍生物”（天使族・地・星４・攻／守２０００）特殊召唤至自己场上。自己场上不存在“命运的旅途”的情况下，进而可从牌组将１张“命运的旅途”以表侧表示放在自己的魔法与陷阱区域。
 card_type: Spell
 property: Normal
 series:
