--- a/data/cards/09726840.yaml
+++ b/data/cards/09726840.yaml
@@ -12,7 +12,7 @@ name:
   ko: 섬도기동－링케이지
   ko_rr: Seomdogidong - Ringkeiji
   zh-TW:
-  zh-CN: 闪刀起动-连刀
+  zh-CN: 闪刀启动－连闪
 text:
   en: |-
     If you control no monsters in your Main Monster Zone: You cannot Special Summon monsters from the Extra Deck for the rest of this turn after this card resolves, except "Sky Striker Ace" monsters, also send 1 other card you control to the GY, and if you do, Special Summon 1 "Sky Striker Ace" monster from your Extra Deck to the Extra Monster Zone, and if you have at least 1 LIGHT and 1 DARK "Sky Striker Ace" monsters on your field and/or in your GY, the Summoned monster gains 1000 ATK.
@@ -33,7 +33,7 @@ text:
   zh-TW: |-
     ①：可在我方的主要怪獸區不存在怪獸的狀況下發動。選擇１張此卡以外的我方場上的卡送至墓地，從額外牌組特殊召喚１隻「閃刀姬」怪獸至額外怪獸區。在我方場上・墓地各存在１隻以上光屬性和闇屬性的「閃刀姬」怪獸的狀況下，透過此效果特殊召喚的怪獸的攻擊力提升１０００。此卡發動後，在回合結束前我方可從額外牌組特殊召喚的怪獸僅限「閃刀姬」怪獸。
   zh-CN: |-
-    ①：自己的主要怪兽区域没有怪兽存在的场合才能发动。选这张卡以外的自己场上1张卡送去墓地，从额外卡组把1只「闪刀姬」怪兽在额外怪兽区域特殊召唤。自己的场上·墓地有光属性和暗属性的「闪刀姬」怪兽各1只以上存在的场合，这个效果特殊召唤的怪兽的攻击力上升1000。这张卡的发动后，直到回合结束时自己不是「闪刀姬」怪兽不能从额外卡组特殊召唤。
+    ①：自己的主要怪兽区域不存在怪兽的情况下可以发动。将自己场上１张其他的卡送至墓地，从额外牌组将１只“闪刀姬”怪兽特殊召唤至额外怪兽区域。自己的场上・墓地存在光属性和暗属性“闪刀姬”怪兽各１只以上的情况下，以此效果特殊召唤的怪兽的攻击力上升１０００。此卡发动后，直至回合结束时为止，自己从额外牌组仅可特殊召唤“闪刀姬”怪兽。
 card_type: Spell
 property: Quick-Play
 series:
