--- a/data/cards/11827244.yaml
+++ b/data/cards/11827244.yaml
@@ -12,7 +12,7 @@ name:
   ko: 매지컬라이즈 퓨전
   ko_rr: Maejikeollaijeu Pyujeon
   zh-TW:
-  zh-CN: 圆融魔术
+  zh-CN: 圆融结合魔术
 text:
   en: |-
     Fusion Summon 1 Spellcaster Fusion Monster from your Extra Deck, by banishing Fusion Materials mentioned on it from your field or GY. You can only activate 1 "Magicalized Fusion" per turn.
@@ -33,8 +33,8 @@ text:
   zh-TW: |-
     此卡名的卡１回合僅限發動１張。①：從我方場上・墓地將根據魔法師族的融合怪獸卡決定的融合素材怪獸除外，從額外牌組融合召喚１隻該融合怪獸。
   zh-CN: |-
-    这个卡名的卡在1回合只能发动1张。
-    ①：从自己的场上·墓地把魔法师族融合怪兽卡决定的融合素材怪兽除外，把那1只融合怪兽从额外卡组融合召唤。
+    此卡名的卡１回合仅可发动１张。
+    ①：将自己的场上・墓地的怪兽作为融合素材除外，将１只魔法师族融合怪兽融合召唤。
 card_type: Spell
 property: Normal
 series:
