--- a/data/cards/13048472.yaml
+++ b/data/cards/13048472.yaml
@@ -33,7 +33,8 @@ text:
   zh-TW: |-
     此卡名的卡１回合僅限發動１張。①：從牌組選擇１張儀式魔法卡，另從我方牌組・墓地選擇１隻該儀式魔法卡上寫有卡名的儀式怪獸。將２張該卡加入手牌。
   zh-CN: |-
-    此卡名的卡１回合仅可发动１张。①：从牌组挑选１张仪式魔法卡，进而从自己的牌组・墓地挑选１只卡名记载于该仪式魔法卡的仪式怪兽。将该２张卡加入手牌。
+    此卡名的卡１回合仅可发动１张。
+    ①：从牌组挑选１张仪式魔法卡，进而从自己的牌组・墓地挑选１只卡名记载于该仪式魔法卡的仪式怪兽。将该２张卡加入手牌。
 card_type: Spell
 property: Normal
 images:
