--- a/data/cards/17330916.yaml
+++ b/data/cards/17330916.yaml
@@ -33,7 +33,7 @@ text:
   zh-TW: |-
     ①：可從手牌捨棄此卡發動。將手牌的１隻「娛樂夥伴」怪獸或「異色眼」怪獸出示給對方。此回合，該怪獸及我方手牌的同名怪獸的等級降低１。
   zh-CN: |-
-    ①：把这张卡从手卡丢弃才能发动。手卡1只「娱乐伙伴」怪兽或者「异色眼」怪兽给对方观看。这个回合，那只怪兽以及自己手卡的同名怪兽的等级下降1星。
+    ①：从手牌将此卡舍弃可以发动。将手牌的１只“娱乐伙伴”怪兽或“异色眼”怪兽出示给对手。此回合，该怪兽及自己手牌的同名怪兽的等级下降１。
 card_type: Monster
 monster_type_line: Beast / Pendulum / Effect
 attribute: EARTH
@@ -61,7 +61,7 @@ pendulum_effect:
   zh-TW: |-
     「娛樂夥伴 琴鍵猴」的②鐘擺效果，１回合僅限使用１次。①：在我方另一側鐘擺區不存在「娛樂夥伴」卡的狀況下，此卡的鐘擺刻度變為４。②：可在發動此卡的回合的我方主要階段發動。從牌組將１隻等級４以下的「娛樂夥伴」怪獸加入手牌。
   zh-CN: |-
-    「娱乐伙伴 琴键猴」的②的灵摆效果1回合只能使用1次。①：另一边的自己的灵摆区域没有「娱乐伙伴」卡存在的场合，这张卡的灵摆刻度变成4。②：这张卡发动的回合的自己主要阶段才能发动。从卡组把1只4星以下的「娱乐伙伴」怪兽加入手卡。
+    此卡名的②灵摆效果１回合仅可使用１次。①：另一方自己的灵摆区域不存在“娱乐伙伴”卡的情况下，此卡的灵摆刻度变为４。②：在发动了此卡的回合的自己的主要阶段可以发动。从牌组将等级４以下的１只“娱乐伙伴”怪兽加入手牌。
 series:
 - Performapal
 images:
