--- a/data/cards/23516703.yaml
+++ b/data/cards/23516703.yaml
@@ -33,7 +33,7 @@ text:
   zh-TW: |-
     ①：當回合內成功召喚、反轉召喚、特殊召喚怪獸兩次以上的玩家，此卡存在於魔法＆陷阱區的期間，不能召喚、反轉召喚、特殊召喚怪獸。
   zh-CN: |-
-    ①：只要此卡存在于魔法与陷阱区域，双方在１回合各自可以进行的、怪兽的召唤・反转召唤・特殊召唤的合计次数不得超过２次。
+    ①：此回合中召唤・反转召唤・特殊召唤怪兽合计成功２次以上的玩家，只要此卡存在于魔法与陷阱区域，不可召唤・反转召唤・特殊召唤怪兽。
 card_type: Trap
 property: Continuous
 images:
