--- a/data/cards/41420027.yaml
+++ b/data/cards/41420027.yaml
@@ -39,7 +39,7 @@ text:
   zh-CN: |-
     ①：支付一半的LP可以发动以下效果。
     ●发动魔法・陷阱卡时可以发动。将该发动无效并破坏。
-    ●自己或者是对手召唤・反转召唤・特殊召唤怪兽之际可以发动。将其无效，将该怪兽破坏。
+    ●自己或对手召唤・反转召唤・特殊召唤怪兽之际可以发动。将其无效，将该怪兽破坏。
 card_type: Trap
 property: Counter
 series:
