--- a/data/cards/43925870.yaml
+++ b/data/cards/43925870.yaml
@@ -8,7 +8,7 @@ name:
   it: Genex Rotore
   pt:
   ja: ウィンドファーム・ジェネクス
-  ja_romaji: Windo Fāmu Jenekusu
+  ja_romaji: Windofāmu Jenekusu
   ko: 윈드 팜 제넥스
   ko_rr:
   zh-TW:
