--- a/data/cards/44394295.yaml
+++ b/data/cards/44394295.yaml
@@ -33,7 +33,8 @@ text:
   zh-TW: |-
     此卡名的卡１回合僅限發動１張。①：從我方手牌・場上，將根據「影依」融合怪獸卡決定的融合素材怪獸送至墓地，從額外牌組融合召喚１隻該融合怪獸。在對方場上存在從額外牌組被特殊召喚的怪獸的狀況下，也可將我方牌組的怪獸做為融合素材。
   zh-CN: |-
-    此卡名的卡1回合仅可发动1张。①：从自己的手牌・场上将由“影依”融合怪兽卡决定的融合素材怪兽送至墓地，从额外牌组中将1只该融合怪兽融合召唤。在对手场上有从额外牌组中被特殊召唤的怪兽存在的情况下，可将自己牌组中的怪兽也作为融合素材。
+    此卡名的卡１回合仅可发动１张。
+    ①：以自己的手牌・场上的怪兽作为融合素材，将１只“影依”融合怪兽融合召唤。被从额外牌组特殊召唤的怪兽存在于对手场上的情况下，可将自己牌组中的怪兽也作为融合素材。
 card_type: Spell
 property: Normal
 series:
