--- a/data/cards/62265044.yaml
+++ b/data/cards/62265044.yaml
@@ -51,9 +51,9 @@ text:
     ●从牌组将1只等级4以下并带有「龍盟」之名的怪兽加入手牌。
     ●从牌组将1只龙族怪兽送入墓地。
   zh-CN: |-
-    ①：1回合1次，扔掉1张手牌，可从以下效果选择1个发动。
-    ●从牌组将1只等级4以下的"龙骑兵团"怪兽加入手牌。
-    ●从牌组将1只龙族怪兽送至墓地。
+    ①：１回合１次，舍弃１张手牌，可从以下效果中选择１个发动。
+    ●从牌组将１只等级４以下的“龙骑兵团”怪兽加入手牌。
+    ●从牌组将１只龙族怪兽送至墓地。
 card_type: Spell
 property: Field
 images:
