--- a/data/cards/95477924.yaml
+++ b/data/cards/95477924.yaml
@@ -12,7 +12,7 @@ name:
   ko: 매지션즈 샐베이션
   ko_rr: Maejisyeonjeu Saelbeisyeon
   zh-TW:
-  zh-CN: 魔导士救难
+  zh-CN: 魔术师救助
 text:
   en: |-
     When this card is activated: You can Set 1 "Eternal Soul" directly from your Deck. If you Normal or Special Summon "Dark Magician" or "Dark Magician Girl" (except during the Damage Step): You can target 1 of those monsters; Special Summon 1 "Dark Magician" or "Dark Magician Girl" from your GY, with a different name than that monster. You can only use this effect of "Magician's Salvation" once per turn. You can only activate 1 "Magician's Salvation" per turn.
@@ -33,7 +33,9 @@ text:
   zh-TW: |-
     此卡名的卡１回合僅限發動１張，此卡名的②效果，１回合僅限使用１次。①：做為此卡發動時的效果處理，從牌組選擇１張「永遠之魂」覆蓋在我方場上。②：在我方成功召喚・特殊召喚「黑魔導」或「黑魔導女孩」的狀況下，可將１隻該怪獸做為對象發動。從我方墓地選擇１隻與該怪獸卡名不同的「黑魔導」或１隻「黑魔導女孩」特殊召喚。
   zh-CN: |-
-    这个卡名的卡1回合只能发动1张，这个卡名的②效果1回合只能使用1次。①：作为这张卡发动时的效果处理，可以从卡组选1张「永遠の魂／永远之魂」盖放到自己的场上。②：自己召唤或特殊召唤「ブラック・マジシャン／黑魔导士」或者「ブラック・マジシャン・ガール／黑魔导士少女」成功的场合，可以以那样的1只怪兽为对象发动。从自己的墓地选1只与那只怪兽卡名不同的的「ブラック・マジシャン／黑魔导士」或者「ブラック・マジシャン・ガール／黑魔导士少女」特殊召唤。
+    此卡名的卡１回合仅可发动１张，此卡名的②效果１回合仅可使用１次。
+    ①：作为此卡发动时的效果处理，可从牌组将１张“永远之魂”放置在自己场上。
+    ②：自己召唤・特殊召唤“黑魔导”或“黑魔导女孩”的情况下，以该１只怪兽为对象可以发动。从自己的墓地将１只卡名与该怪兽不同的“黑魔导”或“黑魔导女孩”特殊召唤。
 card_type: Spell
 property: Field
 images:
