--- a/data/cards/08949584.yaml
+++ b/data/cards/08949584.yaml
@@ -33,7 +33,7 @@ text:
   zh-TW: |-
     ①：在我方場上不存在正面表示怪獸的狀況下，可支付一半LP發動。從牌組特殊召喚１隻等級４以下的「元素－英雄」怪獸。
   zh-CN: |-
-    ①：自己场上没有表侧表示怪兽存在的情况下，支付一半LP可以发动。从牌组将1只等级4以下的"元素－英雄"怪兽特殊召唤。
+    ①：自己场上不存在表侧表示怪兽的情况下，支付一半LP可以发动。从牌组将１只等级４以下的“元素－英雄”怪兽特殊召唤。
 card_type: Spell
 property: Normal
 images:
