--- a/data/cards/14532163.yaml
+++ b/data/cards/14532163.yaml
@@ -57,7 +57,7 @@ text:
     ●將對方場上的所有攻擊表示怪獸全部破壞。
     ●將對方場上的所有魔法・陷阱卡全部破壞。
   zh-CN: |-
-    此卡名的卡1回合仅可发动1张。①：自己场上没有表侧表示的卡存在的情况下，可从以下效果中选择1个发动。
+    此卡名的卡１回合仅可发动１张。①：自己场上不存在表侧表示的卡的情况下，可从以下效果中选择１个发动。
     ●将对手场上攻击表示的怪兽全部破坏。
     ●将对手场上的魔法・陷阱卡全部破坏。
 card_type: Spell
