--- a/data/cards/20899496.yaml
+++ b/data/cards/20899496.yaml
@@ -33,7 +33,8 @@ text:
   zh-TW: |-
     此卡名的卡１回合僅限發動１張。①：可將對方墓地的１隻怪獸做為對象發動。將該怪獸效果變為無效特殊召喚至我方場上。其後，可從我方及對方場上各選擇將１隻種族相同的怪獸除外。
   zh-CN: |-
-    此卡名的卡１回合仅可发动１张。①：以对手墓地的１只怪兽为对象可以发动。将该怪兽效果无效并特殊召唤至自己场上。然后可从自己及对手场上，将种族相同的怪兽各１只除外。
+    此卡名的卡１回合仅可发动１张。
+    ①：以对手墓地的１只怪兽为对象可以发动。将该怪兽效果无效并特殊召唤至自己场上。然后可从自己及对手场上，将种族相同的怪兽各１只除外。
 card_type: Trap
 property: Normal
 images:
