--- a/data/cards/21011044.yaml
+++ b/data/cards/21011044.yaml
@@ -33,7 +33,8 @@ text:
   zh-TW: |-
     此卡名的①效果，１回合僅限使用１次。①：可在我方・對方的主要階段發動。從我方場上・墓地將根據「影依」融合怪獸卡決定的融合素材怪獸除外，從額外牌組融合召喚１隻該融合怪獸。其後，可選擇對方場上的１隻持有屬性與透過此效果特殊召喚的怪獸相同的怪獸送至墓地。透過此效果特殊召喚的怪獸無法直接攻擊。
   zh-CN: |-
-    此卡名的①效果１回合仅可使用１次。①：在自己・对手的主要阶段可以发动。从自己场上・墓地，将由“影依”融合怪兽卡决定的融合素材怪兽除外，从额外牌组将１只该融合怪兽融合召唤。然后，可挑选对手场上１只拥有与以此效果特殊召唤的怪兽相同属性的怪兽送至墓地。以此效果特殊召唤的怪兽不可直接攻击。
+    此卡名的①效果１回合仅可使用１次。
+    ①：在自己・对手的主要阶段可以发动。将自己场上・墓地的怪兽作为融合素材除外，将１只“影依”融合怪兽融合召唤。然后，可将对手场上１只拥有与以此效果特殊召唤的怪兽相同属性的怪兽送至墓地。以此效果特殊召唤的怪兽不可直接攻击。
 card_type: Trap
 property: Continuous
 series:
