--- a/data/cards/40975243.yaml
+++ b/data/cards/40975243.yaml
@@ -33,7 +33,8 @@ text:
   zh-TW: |-
     此卡名的卡１回合僅限發動１張。①：從我方墓地的怪獸及我方被除外的怪獸中，選擇任意數量的獸族・獸戰士族・鳥獸族怪獸，將其效果變為無效特殊召喚，僅限以所選怪獸做為素材連結召喚１隻「鐵獸」連結怪獸。
   zh-CN: |-
-    此卡名的卡１回合仅可发动１张。①：从自己墓地的怪兽及被除外的自己的怪兽中，挑选任意数量的兽族・兽战士族・鸟兽族怪兽，将其效果无效并特殊召唤，将１只仅以该怪兽作为素材的“铁兽”连接怪兽连接召唤。
+    此卡名的卡１回合仅可发动１张。
+    ①：将自己墓地・除外状态的任意数量的兽族・兽战士族・鸟兽族怪兽效果无效并特殊召唤，将１只仅以该怪兽作为素材的“铁兽”连接怪兽连接召唤。
 card_type: Trap
 property: Normal
 series:
