--- a/data/cards/48130397.yaml
+++ b/data/cards/48130397.yaml
@@ -33,7 +33,8 @@ text:
   zh-TW: |-
     針對此卡的發動，無法發動魔法・陷阱・怪獸的效果。①：可捨棄１張手牌發動。從我方・對方場上將根據融合怪獸卡決定的融合素材怪獸送至墓地，從額外牌組融合召喚１隻該融合怪獸。
   zh-CN: |-
-    应对此卡的发动，魔法・陷阱・怪兽的效果不可发动。①：舍弃1张手牌可以发动。从自己・对手的场上将由融合怪兽卡决定的融合素材怪兽送至墓地，从额外牌组将1只该融合怪兽融合召唤。
+    应对此卡的发动，魔法・陷阱・怪兽的效果不可发动。
+    ①：舍弃１张手牌可以发动。以自己・对手场上的怪兽作为融合素材，将１只融合怪兽融合召唤。
 card_type: Spell
 property: Quick-Play
 series:
