--- a/data/cards/54693926.yaml
+++ b/data/cards/54693926.yaml
@@ -33,7 +33,8 @@ text:
   zh-TW: |-
     針對此卡的發動，無法發動怪獸的效果。①：將對方場上的所有正面表示怪獸的效果在回合結束前變為無效。此卡發動後，在回合結束前對方受到的所有傷害變為０。
   zh-CN: |-
-    应对此卡的发动怪兽的效果不可发动。①：对手场上所有表侧表示怪兽的效果直至回合结束时为止无效。此卡发动后，直至回合结束时为止，对手所受的全部伤害变为0。
+    应对此卡的发动，怪兽的效果不可发动。
+    ①：将对手场上所有表侧表示怪兽的效果直至回合结束时为止无效。此卡发动后，直至回合结束时为止，对手所受的所有伤害变为０。
 card_type: Spell
 property: Normal
 images:
