--- a/data/cards/83326048.yaml
+++ b/data/cards/83326048.yaml
@@ -36,7 +36,8 @@ text:
     此卡名的卡１回合僅限發動１張。①：可宣言１個怪獸種類（儀式・融合・同步・超量・鐘擺）發動。此回合中，適用以下效果。
     ●雙方無法特殊召喚宣言的種類的怪獸，場上的宣言的種類的怪獸效果無效化。
   zh-CN: |-
-    此卡名的卡1回合仅可发动1张。①：宣言怪兽的1个种类（仪式・融合・同步・超量・灵摆）可以发动。在此回合中适用以下效果。
+    此卡名的卡１回合仅可发动１张。
+    ①：宣言１个怪兽的种类（仪式・融合・同步・超量・灵摆）可以发动。在此回合中适用以下效果。
     ●双方不可特殊召唤所宣言种类的怪兽，场上所宣言种类的怪兽的效果无效化。
 card_type: Trap
 property: Normal
