--- a/data/cards/94192409.yaml
+++ b/data/cards/94192409.yaml
@@ -33,7 +33,7 @@ text:
   zh-TW: |-
     选择场上的1只怪兽并返回至持有者的手牌。
   zh-CN: |-
-    ①：以场上的１只怪兽为对象可以发动。将该怪兽放回持有者的手牌中。
+    ①：以场上的１只怪兽为对象可以发动。将该怪兽放回手牌。
 card_type: Trap
 property: Normal
 images:
