--- a/data/cards/96363153.yaml
+++ b/data/cards/96363153.yaml
@@ -33,7 +33,7 @@ text:
   zh-TW: |-
     ①：從牌組將１隻「同步士」協調加入手牌，將牌組洗牌。其後，將我方牌組最上方的卡送至墓地。
   zh-CN: |-
-    ①：从牌组将1只"同步士"协调加入手牌，将牌组洗牌。然后将自己牌组最上面的卡送至墓地。
+    ①：从牌组将１只“同步士”协调加入手牌，将牌组洗牌。然后将自己牌组最上面的卡送至墓地。
 card_type: Spell
 property: Normal
 images:
