--- a/data/cards/99330325.yaml
+++ b/data/cards/99330325.yaml
@@ -33,7 +33,9 @@ text:
   zh-TW: |-
     此卡名的卡１回合僅限發動１張。①：將場上的所有怪獸全部破壞。其後，從牌組以攻擊表示特殊召喚卡名不同的「壞獸」怪獸各１隻至我方・對方場上。透過此效果特殊召喚的怪獸無法變更表示形式，在可攻擊的狀況下必須進行攻擊。②：可將墓地的此卡除外發動。從牌組將１隻「壞獸」怪獸加入手牌。此效果無法在此卡被送至墓地的回合發動。
   zh-CN: |-
-    此卡名的卡1回合仅可发动1张。①：将场上的怪兽全部破坏。然后从牌组将卡名不同的“坏兽”怪兽各1只以攻击表示特殊召唤至自己・对手场上。以此效果特殊召唤的怪兽表示形式不可更改，可以攻击的情况下必须攻击。②：将墓地的此卡除外可以发动。从牌组将1只“坏兽”怪兽加入手牌。此效果在此卡被送至墓地的回合不可发动。
+    此卡名的卡１回合仅可发动１张。
+    ①：将场上的怪兽全部破坏。然后从牌组将卡名不同的“坏兽”怪兽各１只以攻击表示特殊召唤至自己・对手场上。以此效果特殊召唤的怪兽表示形式不可更改，可以攻击的情况下必须攻击。
+    ②：从墓地将不是在此回合被送至墓地的此卡除外可以发动。从牌组将１只“坏兽”怪兽加入手牌。
 card_type: Spell
 property: Normal
 series:
