--- a/data/cards/73359475.yaml
+++ b/data/cards/73359475.yaml
@@ -8,7 +8,7 @@ name:
   it: Nobile Cavaliere Peredur
   pt: Nobre Cavaleiro Peredur
   ja: <ruby>聖<rt>せい</rt></ruby><ruby>騎<rt>き</rt></ruby><ruby>士<rt>し</rt></ruby>パーシヴァル
-  ja_romaji: Seikishi Pāshivuaru
+  ja_romaji: Seikishi Pāshivaru
   ko: 성기사 퍼시발
   ko_rr:
   zh-TW:
