--- a/data/series/map.yaml
+++ b/data/series/map.yaml
@@ -479,7 +479,7 @@ Ki-sikil:
   zh-TW:
   zh-CN: 姬丝吉尔
 Forbidden One:
-  de: Der Verbotenen
+  de: Die Verbotene
   es: el Prohibido
   fr: l'Interdit
   it: il/del Proibito
