--- a/data/cards/24634594.yaml
+++ b/data/cards/24634594.yaml
@@ -37,7 +37,7 @@ text:
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードがＳ召喚した場合に発動できる。そのＳ素材としたモンスターの内、チューナー以外のモンスターの数までデッキから昆虫族・植物族モンスターを墓地へ送る。②：このカードがＳ召喚されている場合、自分フィールドの昆虫族・植物族モンスター１体を対象として発動できる。そのモンスターはターン終了時までチューナーになる。
   ko: |-
     튜너 ＋ 튜너 이외의 몬스터 1장 이상
-    이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 싱크로 소환했을 경우에 발동할 수 있다. 그 싱크로 소재로 한 몬스터 중, 튜너 이외의 몬스터의 수까지 덱에서 곤충족 / 식물족 몬스터를 묘지로 보낸다. ②: 이 카드가 싱크로 소환되어 있을 경우, 자신 필드의 곤충족 / 식물족 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터는 턴 종료시까지 튜너가 된다.
+    이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드를 싱크로 소환했을 경우에 발동할 수 있다. 그 싱크로 소재로 한 몬스터 중, 튜너 이외의 몬스터의 수까지 덱에서 곤충족 / 식물족 몬스터를 묘지로 보낸다. ②: 이 카드가 싱크로 소환되어 있을 경우, 자신 필드의 곤충족 / 식물족 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터는 턴 종료시까지 튜너가 된다.
   zh-TW: |-
     協調＋協調以外的怪獸１隻以上
     此卡名的①②效果，１回合各僅限使用１次。
