--- a/data/cards/38409239.yaml
+++ b/data/cards/38409239.yaml
@@ -56,7 +56,10 @@ text:
     ●４体以上：このターン、自分フィールドの魚族モンスターの効果の発動及びその発動した効果は無効化されない。
     ●８体以上：ＥＸデッキから魚族Ｓモンスター１体をＳ召喚扱いで特殊召喚する。
   ko: |-
-    이 카드명의 카드는 1턴에 1장밖에 발동할 수 없다. ①: 제외 상태의 어류족 몬스터의 수에 따라 이하의 효과를 각각 적용한다. ●1장 이상: 이 턴에, 자신의 어류족 몬스터는 전투로는 파괴되지 않는다. ●4장 이상: 이 턴에, 자신 필드의 어류족 몬스터의 효과 발동 및 발동한 효과는 무효화되지 않는다. ●8장 이상: 엑스트라 덱에서 어류족 싱크로 몬스터 1장을 싱크로 소환으로 취급하고 특수 소환한다.
+    이 카드명의 카드는 1턴에 1장밖에 발동할 수 없다. ①: 제외 상태의 어류족 몬스터의 수에 따라 이하의 효과를 각각 적용한다.
+    ●1장 이상: 이 턴에, 자신의 어류족 몬스터는 전투로는 파괴되지 않는다.
+    ●4장 이상: 이 턴에, 자신 필드의 어류족 몬스터의 효과 발동 및 발동한 효과는 무효화되지 않는다.
+    ●8장 이상: 엑스트라 덱에서 어류족 싱크로 몬스터 1장을 싱크로 소환으로 취급하고 특수 소환한다.
   zh-TW: |-
     此卡名的卡１回合僅限發動１張。
     ①：依據除外狀態的魚族怪獸數量分別適用以下效果。
