--- a/data/cards/39522887.yaml
+++ b/data/cards/39522887.yaml
@@ -29,7 +29,7 @@ text:
   ja: |-
     このカード名の①②③の効果はそれぞれ１ターンに１度しか使用できない。①：自分・相手のメインフェイズに、自分の手札・墓地から魚族モンスター２体を除外して発動できる。このカードを手札から特殊召喚する。②：このカードが特殊召喚した場合、フィールドの表側表示カード１枚を対象として発動できる。そのカードはフィールドから離れた場合に除外される。③：このカードが除外された場合、自分の墓地から魚族モンスター１体を除外して発動できる。このカードを手札に加える。
   ko: |-
-    이 카드명의 ①②③의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신 / 상대의 메인 페이즈에, 자신의 패 / 묘지에서 어류족 몬스터 2장을 제외하고 발동할 수 있다. 이 카드를 패에서 특수 소환한다. ②: 이 카드가 특수 소환했을 경우, 필드의 앞면 표시 카드 1장을 대상으로 하고 발동할 수 있다. 그 카드는 필드에서 벗어났을 경우에 제외된다. ③: 이 카드가 제외되었을 경우, 자신 묘지에서 어류족 몬스터 1장을 제외하고 발동할 수 있다. 이 카드를 패에 넣는다.
+    이 카드명의 ①②③의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신 / 상대의 메인 페이즈에, 자신의 패 / 묘지에서 어류족 몬스터 2장을 제외하고 발동할 수 있다. 이 카드를 패에서 특수 소환한다. ②: 이 카드를 특수 소환했을 경우, 필드의 앞면 표시 카드 1장을 대상으로 하고 발동할 수 있다. 그 카드는 필드에서 벗어났을 경우에 제외된다. ③: 이 카드가 제외되었을 경우, 자신 묘지에서 어류족 몬스터 1장을 제외하고 발동할 수 있다. 이 카드를 패에 넣는다.
   zh-TW: |-
     此卡名的①②③效果，１回合各僅限使用１次。
     ①：可在我方・對方的主要階段，從我方手牌・墓地將２隻魚族怪獸除外發動。從手牌特殊召喚此卡。
