--- a/data/cards/65910922.yaml
+++ b/data/cards/65910922.yaml
@@ -37,7 +37,7 @@ text:
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードがＳ召喚した場合に発動できる。デッキからレベル６以下の魚族モンスター１体を除外する。②：このカードがＳ素材として墓地へ送られた場合、自分の墓地の魚族モンスター１体を対象として発動できる。そのモンスターを除外する。その後、そのモンスターのレベル以下のレベルを持つ魚族モンスター１体をデッキから手札に加える事ができる。
   ko: |-
     튜너 ＋ 튜너 이외의 몬스터 1장 이상
-    이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 싱크로 소환했을 경우에 발동할 수 있다. 덱에서 레벨 6 이하의 어류족 몬스터 1장을 제외한다. ②: 이 카드가 싱크로 소재로서 묘지로 보내졌을 경우, 자신 묘지의 어류족 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 제외한다. 그 후, 그 몬스터의 레벨 이하의 레벨을 가지는 어류족 몬스터 1장을 덱에서 패에 넣을 수 있다.
+    이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드를 싱크로 소환했을 경우에 발동할 수 있다. 덱에서 레벨 6 이하의 어류족 몬스터 1장을 제외한다. ②: 이 카드가 싱크로 소재로서 묘지로 보내졌을 경우, 자신 묘지의 어류족 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 제외한다. 그 후, 그 몬스터의 레벨 이하의 레벨을 가지는 어류족 몬스터 1장을 덱에서 패에 넣을 수 있다.
   zh-TW: |-
     協調＋協調以外的怪獸１隻以上
     此卡名的①②效果，１回合各僅限使用１次。
