--- a/data/cards/72309040.yaml
+++ b/data/cards/72309040.yaml
@@ -37,7 +37,7 @@ text:
     ①：このカードの元々の攻撃力は、除外状態のモンスターの数×５００になる。②：相手ターンに、このカードがＳ召喚した場合に発動できる。フィールドのカードを全て除外する。③：このカードがモンスターゾーンから除外された次のターンのスタンバイフェイズに発動できる。除外状態のこのカードを特殊召喚する。
   ko: |-
     어류족 튜너 1장 이상 ＋ 튜너 이외의 몬스터 1장 이상
-    ①: 이 카드의 원래 공격력은, 제외 상태의 몬스터의 수 × 500 이 된다. ②: 상대 턴에, 이 카드가 싱크로 소환했을 경우에 발동할 수 있다. 필드의 카드를 전부 제외한다. ③: 이 카드가 몬스터 존에서 제외된 다음 턴의 스탠바이 페이즈에 발동할 수 있다. 이 카드를 특수 소환한다.
+    ①: 이 카드의 원래 공격력은, 제외 상태의 몬스터의 수 × 500 이 된다. ②: 상대 턴에, 이 카드를 싱크로 소환했을 경우에 발동할 수 있다. 필드의 카드를 전부 제외한다. ③: 이 카드가 몬스터 존에서 제외된 다음 턴의 스탠바이 페이즈에 발동할 수 있다. 제외 상태인 이 카드를 특수 소환한다.
   zh-TW: |-
     魚族協調１隻以上＋協調以外的怪獸１隻以上
     ①：此卡原本的攻擊力變為除外狀態的怪獸數量×５００。
