--- a/data/cards/76133574.yaml
+++ b/data/cards/76133574.yaml
@@ -29,7 +29,7 @@ text:
   ja: |-
     このカード名の①②③の効果はそれぞれ１ターンに１度しか使用できない。①：このカードを手札から除外し、自分の墓地の魚族モンスター１体を対象として発動できる。そのモンスターを除外する。②：このカードが相手ターンに除外された場合に発動できる。このカードを特殊召喚する。③：このカードが特殊召喚した場合に発動できる。このカードを含む自分フィールドのモンスターを素材として魚族Ｓモンスター１体のＳ召喚を行う。
   ko: |-
-    이 카드명의 ①②③의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드를 패에서 제외하고, 자신 묘지의 어류족 몬스터 1장을 대상으로 하여 발동할 수 있다. 그 몬스터를 제외한다. ②: 이 카드가 상대 턴에 제외되었을 경우에 발동할 수 있다. 이 카드를 특수 소환한다. ③: 이 카드가 특수 소환했을 경우에 발동할 수 있다. 이 카드를 포함하는 자신 필드의 몬스터를 소재로서 어류족 싱크로 몬스터 1장의 싱크로 소환을 실행한다.
+    이 카드명의 ①②③의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드를 패에서 제외하고, 자신 묘지의 어류족 몬스터 1장을 대상으로 하여 발동할 수 있다. 그 몬스터를 제외한다. ②: 이 카드가 상대 턴에 제외되었을 경우에 발동할 수 있다. 이 카드를 특수 소환한다. ③: 이 카드를 특수 소환했을 경우에 발동할 수 있다. 이 카드를 포함하는 자신 필드의 몬스터를 소재로서 어류족 싱크로 몬스터 1장의 싱크로 소환을 실행한다.
   zh-TW: |-
     此卡名的①②③效果，１回合各僅限使用１次。
     ①：可從手牌將此卡除外，將我方墓地的１隻魚族怪獸做為對象發動。將該怪獸除外。
