--- a/data/cards/77855162.yaml
+++ b/data/cards/77855162.yaml
@@ -37,7 +37,7 @@ text:
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードがＳ召喚した場合に発動できる。自分の手札・ＥＸデッキ（表側）からレベル４以下のＰモンスター１体を特殊召喚する。②：このカードまたは自分のＰモンスターが相手モンスターと戦闘を行い、その相手モンスターが破壊されなかったダメージステップ終了時に発動できる。その相手モンスターを破壊する。
   ko: |-
     튜너 ＋ 튜너 이외의 몬스터 1장 이상
-    이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 싱크로 소환했을 경우에 발동할 수 있다. 자신의 패 / 엑스트라 덱(앞면)에서 레벨 4 이하의 펜듈럼 몬스터 1장을 특수 소환한다. ②: 이 카드 또는 자신의 펜듈럼 몬스터가 상대 몬스터와 전투를 실행하고, 그 상대 몬스터가 파괴되지 않은 데미지 스텝 종료시에 발동할 수 있다. 그 상대 몬스터를 파괴한다.
+    이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드를 싱크로 소환했을 경우에 발동할 수 있다. 자신의 패 / 엑스트라 덱(앞면)에서 레벨 4 이하의 펜듈럼 몬스터 1장을 특수 소환한다. ②: 이 카드 또는 자신의 펜듈럼 몬스터가 상대 몬스터와 전투를 실행하고, 그 상대 몬스터가 파괴되지 않은 데미지 스텝 종료시에 발동할 수 있다. 그 상대 몬스터를 파괴한다.
   zh-TW: |-
     協調＋協調以外的怪獸１隻以上
     此卡名的①②效果，１回合各僅限使用１次。
