--- a/data/series/list.yaml
+++ b/data/series/list.yaml
@@ -479,7 +479,7 @@
   zh-TW:
   zh-CN: 姬丝吉尔
 - en: Forbidden One
-  de: Die Verbotene
+  de: Der Verbotenen
   es: el Prohibido
   fr: l'Interdit
   it: il/del Proibito
