--- a/rush.yaml
+++ b/rush.yaml
@@ -126390,3 +126390,65 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1030959
+---
+konami_id:
+name:
+  en: Royal Rebel's Elite Amp
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ロイヤルデモンズ・エリートアンプ
+  ja_romaji: Roiyaru Demonzu Erīto Anpu
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    You have 3 or more Fiend Type monsters in your Graveyard, or you have "King's Greed" in your Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Add 1 Level 5 or higher Fiend Type monster with 0 or 2000 DEF from your Graveyard to your hand. You can only attack with Fiend Type monsters this turn.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Fiend / Effect
+attribute: LIGHT
+level: 4
+atk: 1200
+def: 0
+series:
+- Royal Rebel's
+images:
+- index: 1
+  image: RoyalRebelsEliteAmp-RDHC01-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/HC01-JP048
+    set_name: High-Grade Collection
+    rarities:
+    - Super Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1031094
